// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildComputedPackage a/v1.iconv.lock 1`] = `
{
  "@babel/code-frame": [
    "7.12.13",
  ],
  "@babel/core": [
    "7.12.16",
  ],
  "@babel/generator": [
    "7.12.15",
  ],
  "@babel/helper-function-name": [
    "7.12.13",
  ],
  "@babel/helper-get-function-arity": [
    "7.12.13",
  ],
  "@babel/helper-member-expression-to-functions": [
    "7.12.16",
  ],
  "@babel/helper-module-imports": [
    "7.12.13",
  ],
  "@babel/helper-module-transforms": [
    "7.12.13",
  ],
  "@babel/helper-optimise-call-expression": [
    "7.12.13",
  ],
  "@babel/helper-plugin-utils": [
    "7.12.13",
  ],
  "@babel/helper-replace-supers": [
    "7.12.13",
  ],
  "@babel/helper-simple-access": [
    "7.12.13",
  ],
  "@babel/helper-split-export-declaration": [
    "7.12.13",
  ],
  "@babel/helper-validator-identifier": [
    "7.12.11",
  ],
  "@babel/helpers": [
    "7.12.13",
  ],
  "@babel/highlight": [
    "7.12.13",
  ],
  "@babel/parser": [
    "7.12.16",
  ],
  "@babel/plugin-syntax-async-generators": [
    "7.8.4",
  ],
  "@babel/plugin-syntax-bigint": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-class-properties": [
    "7.12.13",
  ],
  "@babel/plugin-syntax-import-meta": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-json-strings": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-logical-assignment-operators": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-nullish-coalescing-operator": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-numeric-separator": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-object-rest-spread": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-catch-binding": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-chaining": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-top-level-await": [
    "7.12.13",
  ],
  "@babel/template": [
    "7.12.13",
  ],
  "@babel/traverse": [
    "7.12.13",
  ],
  "@babel/types": [
    "7.12.13",
  ],
  "@bcoe/v8-coverage": [
    "0.2.3",
  ],
  "@bluelovers/tsconfig": [
    "1.0.20",
  ],
  "@cnakazawa/watch": [
    "1.0.4",
  ],
  "@istanbuljs/load-nyc-config": [
    "1.1.0",
  ],
  "@istanbuljs/schema": [
    "0.1.2",
  ],
  "@jest/console": [
    "26.6.2",
  ],
  "@jest/core": [
    "26.6.3",
  ],
  "@jest/environment": [
    "26.6.2",
  ],
  "@jest/fake-timers": [
    "26.6.2",
  ],
  "@jest/globals": [
    "26.6.2",
  ],
  "@jest/reporters": [
    "26.6.2",
  ],
  "@jest/source-map": [
    "26.6.2",
  ],
  "@jest/test-result": [
    "26.6.2",
  ],
  "@jest/test-sequencer": [
    "26.6.3",
  ],
  "@jest/transform": [
    "26.6.2",
  ],
  "@jest/types": [
    "26.6.2",
  ],
  "@sinonjs/commons": [
    "1.8.2",
  ],
  "@sinonjs/fake-timers": [
    "6.0.1",
  ],
  "@types/babel__core": [
    "7.1.12",
  ],
  "@types/babel__generator": [
    "7.6.2",
  ],
  "@types/babel__template": [
    "7.4.0",
  ],
  "@types/babel__traverse": [
    "7.11.0",
  ],
  "@types/bluebird": [
    "3.5.33",
  ],
  "@types/fs-extra": [
    "9.0.7",
  ],
  "@types/graceful-fs": [
    "4.1.5",
  ],
  "@types/html-encoding-sniffer": [
    "2.0.1",
  ],
  "@types/istanbul-lib-coverage": [
    "2.0.3",
  ],
  "@types/istanbul-lib-report": [
    "3.0.0",
  ],
  "@types/istanbul-reports": [
    "3.0.0",
  ],
  "@types/jest": [
    "26.0.20",
  ],
  "@types/lodash": [
    "4.14.168",
  ],
  "@types/luxon": [
    "1.25.1",
  ],
  "@types/mime-types": [
    "2.1.0",
  ],
  "@types/node": [
    "14.14.26",
  ],
  "@types/normalize-package-data": [
    "2.4.0",
  ],
  "@types/prettier": [
    "2.2.0",
  ],
  "@types/stack-utils": [
    "2.0.0",
  ],
  "@types/yargs": [
    "15.0.13",
  ],
  "@types/yargs-parser": [
    "20.2.0",
  ],
  "abab": [
    "2.0.5",
  ],
  "acorn": [
    "7.4.1",
  ],
  "acorn-globals": [
    "6.0.0",
  ],
  "acorn-walk": [
    "7.2.0",
  ],
  "ajv": [
    "6.12.6",
  ],
  "ansi-escapes": [
    "4.3.1",
  ],
  "ansi-regex": [
    "5.0.0",
  ],
  "ansi-styles": [
    "3.2.1",
    "4.3.0",
  ],
  "anymatch": [
    "2.0.0",
    "3.1.1",
  ],
  "argparse": [
    "1.0.10",
  ],
  "arr-diff": [
    "4.0.0",
  ],
  "arr-flatten": [
    "1.1.0",
  ],
  "arr-union": [
    "3.1.0",
  ],
  "array-unique": [
    "0.3.2",
  ],
  "asn1": [
    "0.2.4",
  ],
  "assert-plus": [
    "1.0.0",
  ],
  "assign-symbols": [
    "1.0.0",
  ],
  "asynckit": [
    "0.4.0",
  ],
  "at-least-node": [
    "1.0.0",
  ],
  "atob": [
    "2.1.2",
  ],
  "aws-sign2": [
    "0.7.0",
  ],
  "aws4": [
    "1.11.0",
  ],
  "babel-jest": [
    "26.6.3",
  ],
  "babel-plugin-istanbul": [
    "6.0.0",
  ],
  "babel-plugin-jest-hoist": [
    "26.6.2",
  ],
  "babel-preset-current-node-syntax": [
    "1.0.1",
  ],
  "babel-preset-jest": [
    "26.6.2",
  ],
  "balanced-match": [
    "1.0.0",
  ],
  "base": [
    "0.11.2",
  ],
  "bcrypt-pbkdf": [
    "1.0.2",
  ],
  "bluebird": [
    "3.7.2",
  ],
  "brace-expansion": [
    "1.1.11",
  ],
  "braces": [
    "2.3.2",
    "3.0.2",
  ],
  "browser-process-hrtime": [
    "1.0.0",
  ],
  "bs-logger": [
    "0.2.6",
  ],
  "bser": [
    "2.1.1",
  ],
  "buffer-from": [
    "1.1.1",
  ],
  "cache-base": [
    "1.0.1",
  ],
  "callsites": [
    "3.1.0",
  ],
  "camelcase": [
    "5.3.1",
    "6.2.0",
  ],
  "capture-exit": [
    "2.0.0",
  ],
  "caseless": [
    "0.12.0",
  ],
  "chalk": [
    "2.4.2",
    "4.1.0",
  ],
  "char-regex": [
    "1.0.2",
  ],
  "ci-info": [
    "2.0.0",
  ],
  "cjs-module-lexer": [
    "0.6.0",
  ],
  "class-utils": [
    "0.3.6",
  ],
  "cliui": [
    "6.0.0",
  ],
  "co": [
    "4.6.0",
  ],
  "collect-v8-coverage": [
    "1.0.1",
  ],
  "collection-visit": [
    "1.0.0",
  ],
  "color-convert": [
    "1.9.3",
    "2.0.1",
  ],
  "color-name": [
    "1.1.3",
    "1.1.4",
  ],
  "combined-stream": [
    "1.0.8",
  ],
  "component-emitter": [
    "1.3.0",
  ],
  "concat-map": [
    "0.0.1",
  ],
  "convert-source-map": [
    "1.7.0",
  ],
  "copy-descriptor": [
    "0.1.1",
  ],
  "core-util-is": [
    "1.0.2",
  ],
  "cross-spawn": [
    "6.0.5",
    "7.0.3",
  ],
  "cssom": [
    "0.3.8",
    "0.4.4",
  ],
  "cssstyle": [
    "2.3.0",
  ],
  "dashdash": [
    "1.14.1",
  ],
  "data-urls": [
    "2.0.0",
  ],
  "debug": [
    "2.6.9",
    "4.3.1",
  ],
  "debug-color2": [
    "1.2.3",
  ],
  "decamelize": [
    "1.2.0",
  ],
  "decimal.js": [
    "10.2.1",
  ],
  "decode-uri-component": [
    "0.2.0",
  ],
  "deep-is": [
    "0.1.3",
  ],
  "deepmerge": [
    "4.2.2",
  ],
  "define-property": [
    "0.2.5",
    "1.0.0",
    "2.0.2",
  ],
  "delayed-stream": [
    "1.0.0",
  ],
  "detect-newline": [
    "3.1.0",
  ],
  "diff-sequences": [
    "26.6.2",
  ],
  "domexception": [
    "2.0.1",
  ],
  "ecc-jsbn": [
    "0.1.2",
  ],
  "emittery": [
    "0.7.2",
  ],
  "emoji-regex": [
    "8.0.0",
  ],
  "end-of-stream": [
    "1.4.4",
  ],
  "env-bool": [
    "1.0.3",
  ],
  "error-ex": [
    "1.3.2",
  ],
  "escape-string-regexp": [
    "1.0.5",
    "2.0.0",
  ],
  "escodegen": [
    "1.14.3",
  ],
  "esprima": [
    "4.0.1",
  ],
  "estraverse": [
    "4.3.0",
  ],
  "esutils": [
    "2.0.3",
  ],
  "exec-sh": [
    "0.3.4",
  ],
  "execa": [
    "1.0.0",
    "4.1.0",
  ],
  "exit": [
    "0.1.2",
  ],
  "expand-brackets": [
    "2.1.4",
  ],
  "expect": [
    "26.6.2",
  ],
  "extend": [
    "3.0.2",
  ],
  "extend-shallow": [
    "2.0.1",
    "3.0.2",
  ],
  "extglob": [
    "2.0.4",
  ],
  "extsprintf": [
    "1.3.0",
    "1.4.0",
  ],
  "fast-deep-equal": [
    "3.1.3",
  ],
  "fast-json-stable-stringify": [
    "2.1.0",
  ],
  "fast-levenshtein": [
    "2.0.6",
  ],
  "fb-watchman": [
    "2.0.1",
  ],
  "fill-range": [
    "4.0.0",
    "7.0.1",
  ],
  "find-up": [
    "4.1.0",
  ],
  "for-in": [
    "1.0.2",
  ],
  "forever-agent": [
    "0.6.1",
  ],
  "form-data": [
    "2.3.3",
  ],
  "fragment-cache": [
    "0.2.1",
  ],
  "fs-extra": [
    "9.1.0",
  ],
  "fs.realpath": [
    "1.0.0",
  ],
  "fsevents": [
    "2.3.2",
  ],
  "function-bind": [
    "1.1.1",
  ],
  "gensync": [
    "1.0.0-beta.2",
  ],
  "get-caller-file": [
    "2.0.5",
  ],
  "get-package-type": [
    "0.1.0",
  ],
  "get-stream": [
    "4.1.0",
    "5.2.0",
  ],
  "get-value": [
    "2.0.6",
  ],
  "getpass": [
    "0.1.7",
  ],
  "glob": [
    "7.1.6",
  ],
  "globals": [
    "11.12.0",
  ],
  "graceful-fs": [
    "4.2.6",
  ],
  "growly": [
    "1.3.0",
  ],
  "har-schema": [
    "2.0.0",
  ],
  "har-validator": [
    "5.1.5",
  ],
  "has": [
    "1.0.3",
  ],
  "has-flag": [
    "3.0.0",
    "4.0.0",
  ],
  "has-value": [
    "0.3.1",
    "1.0.0",
  ],
  "has-values": [
    "0.1.4",
    "1.0.0",
  ],
  "hosted-git-info": [
    "2.8.8",
  ],
  "html-encoding-sniffer": [
    "2.0.1",
  ],
  "html-escaper": [
    "2.0.2",
  ],
  "http-signature": [
    "1.2.0",
  ],
  "human-signals": [
    "1.1.1",
  ],
  "iconv-lite": [
    "0.4.24",
    "0.6.2",
  ],
  "import-local": [
    "3.0.2",
  ],
  "imurmurhash": [
    "0.1.4",
  ],
  "inflight": [
    "1.0.6",
  ],
  "inherits": [
    "2.0.4",
  ],
  "ip-regex": [
    "2.1.0",
  ],
  "is-accessor-descriptor": [
    "0.1.6",
    "1.0.0",
  ],
  "is-arrayish": [
    "0.2.1",
  ],
  "is-buffer": [
    "1.1.6",
  ],
  "is-ci": [
    "2.0.0",
  ],
  "is-core-module": [
    "2.2.0",
  ],
  "is-data-descriptor": [
    "0.1.4",
    "1.0.0",
  ],
  "is-descriptor": [
    "0.1.6",
    "1.0.2",
  ],
  "is-docker": [
    "2.1.1",
  ],
  "is-extendable": [
    "0.1.1",
    "1.0.1",
  ],
  "is-fullwidth-code-point": [
    "3.0.0",
  ],
  "is-generator-fn": [
    "2.1.0",
  ],
  "is-number": [
    "3.0.0",
    "7.0.0",
  ],
  "is-plain-object": [
    "2.0.4",
  ],
  "is-potential-custom-element-name": [
    "1.0.0",
  ],
  "is-stream": [
    "1.1.0",
    "2.0.0",
  ],
  "is-typedarray": [
    "1.0.0",
  ],
  "is-windows": [
    "1.0.2",
  ],
  "is-wsl": [
    "2.2.0",
  ],
  "isarray": [
    "1.0.0",
  ],
  "isexe": [
    "2.0.0",
  ],
  "isobject": [
    "2.1.0",
    "3.0.1",
  ],
  "isstream": [
    "0.1.2",
  ],
  "istanbul-lib-coverage": [
    "3.0.0",
  ],
  "istanbul-lib-instrument": [
    "4.0.3",
  ],
  "istanbul-lib-report": [
    "3.0.0",
  ],
  "istanbul-lib-source-maps": [
    "4.0.0",
  ],
  "istanbul-reports": [
    "3.0.2",
  ],
  "jest": [
    "26.6.3",
  ],
  "jest-changed-files": [
    "26.6.2",
  ],
  "jest-cli": [
    "26.6.3",
  ],
  "jest-config": [
    "26.6.3",
  ],
  "jest-diff": [
    "26.6.2",
  ],
  "jest-docblock": [
    "26.0.0",
  ],
  "jest-each": [
    "26.6.2",
  ],
  "jest-environment-jsdom": [
    "26.6.2",
  ],
  "jest-environment-node": [
    "26.6.2",
  ],
  "jest-get-type": [
    "26.3.0",
  ],
  "jest-haste-map": [
    "26.6.2",
  ],
  "jest-jasmine2": [
    "26.6.3",
  ],
  "jest-leak-detector": [
    "26.6.2",
  ],
  "jest-matcher-utils": [
    "26.6.2",
  ],
  "jest-message-util": [
    "26.6.2",
  ],
  "jest-mock": [
    "26.6.2",
  ],
  "jest-pnp-resolver": [
    "1.2.2",
  ],
  "jest-regex-util": [
    "26.0.0",
  ],
  "jest-resolve": [
    "26.6.2",
  ],
  "jest-resolve-dependencies": [
    "26.6.3",
  ],
  "jest-runner": [
    "26.6.3",
  ],
  "jest-runtime": [
    "26.6.3",
  ],
  "jest-serializer": [
    "26.6.2",
  ],
  "jest-snapshot": [
    "26.6.2",
  ],
  "jest-util": [
    "26.6.2",
  ],
  "jest-validate": [
    "26.6.2",
  ],
  "jest-watcher": [
    "26.6.2",
  ],
  "jest-worker": [
    "26.6.2",
  ],
  "js-tokens": [
    "4.0.0",
  ],
  "js-yaml": [
    "3.14.1",
  ],
  "jsbn": [
    "0.1.1",
  ],
  "jschardet": [
    "2.2.1",
  ],
  "jsdom": [
    "16.4.0",
  ],
  "jsesc": [
    "2.5.2",
  ],
  "json-parse-even-better-errors": [
    "2.3.1",
  ],
  "json-schema": [
    "0.2.3",
  ],
  "json-schema-traverse": [
    "0.4.1",
  ],
  "json-stringify-safe": [
    "5.0.1",
  ],
  "json5": [
    "2.2.0",
  ],
  "jsonfile": [
    "6.1.0",
  ],
  "jsprim": [
    "1.4.1",
  ],
  "kind-of": [
    "3.2.2",
    "4.0.0",
    "5.1.0",
    "6.0.3",
  ],
  "kleur": [
    "3.0.3",
  ],
  "leven": [
    "3.1.0",
  ],
  "levn": [
    "0.3.0",
  ],
  "lines-and-columns": [
    "1.1.6",
  ],
  "locate-path": [
    "5.0.0",
  ],
  "lodash": [
    "4.17.20",
  ],
  "lodash.sortby": [
    "4.7.0",
  ],
  "lru-cache": [
    "6.0.0",
  ],
  "luxon": [
    "1.25.0",
  ],
  "make-dir": [
    "3.1.0",
  ],
  "make-error": [
    "1.3.6",
  ],
  "makeerror": [
    "1.0.11",
  ],
  "map-cache": [
    "0.2.2",
  ],
  "map-visit": [
    "1.0.0",
  ],
  "merge-stream": [
    "2.0.0",
  ],
  "micromatch": [
    "3.1.10",
    "4.0.2",
  ],
  "mime-db": [
    "1.45.0",
  ],
  "mime-types": [
    "2.1.28",
  ],
  "mimic-fn": [
    "2.1.0",
  ],
  "minimatch": [
    "3.0.4",
  ],
  "minimist": [
    "1.2.5",
  ],
  "mixin-deep": [
    "1.3.2",
  ],
  "mkdirp": [
    "1.0.4",
  ],
  "ms": [
    "2.0.0",
    "2.1.2",
  ],
  "nanomatch": [
    "1.2.13",
  ],
  "natural-compare": [
    "1.4.0",
  ],
  "nice-try": [
    "1.0.5",
  ],
  "node-int64": [
    "0.4.0",
  ],
  "node-modules-regexp": [
    "1.0.0",
  ],
  "node-notifier": [
    "8.0.1",
  ],
  "normalize-package-data": [
    "2.5.0",
  ],
  "normalize-path": [
    "2.1.1",
    "3.0.0",
  ],
  "npm-run-path": [
    "2.0.2",
    "4.0.1",
  ],
  "nwsapi": [
    "2.2.0",
  ],
  "oauth-sign": [
    "0.9.0",
  ],
  "object-copy": [
    "0.1.0",
  ],
  "object-visit": [
    "1.0.1",
  ],
  "object.pick": [
    "1.3.0",
  ],
  "once": [
    "1.4.0",
  ],
  "onetime": [
    "5.1.2",
  ],
  "optionator": [
    "0.8.3",
  ],
  "p-each-series": [
    "2.2.0",
  ],
  "p-finally": [
    "1.0.0",
  ],
  "p-limit": [
    "2.3.0",
  ],
  "p-locate": [
    "4.1.0",
  ],
  "p-try": [
    "2.2.0",
  ],
  "parse-json": [
    "5.2.0",
  ],
  "parse5": [
    "5.1.1",
  ],
  "pascalcase": [
    "0.1.1",
  ],
  "path-exists": [
    "4.0.0",
  ],
  "path-is-absolute": [
    "1.0.1",
  ],
  "path-key": [
    "2.0.1",
    "3.1.1",
  ],
  "path-parse": [
    "1.0.6",
  ],
  "performance-now": [
    "2.1.0",
  ],
  "picomatch": [
    "2.2.2",
  ],
  "pirates": [
    "4.0.1",
  ],
  "pkg-dir": [
    "4.2.0",
  ],
  "posix-character-classes": [
    "0.1.1",
  ],
  "prelude-ls": [
    "1.1.2",
  ],
  "pretty-format": [
    "26.6.2",
  ],
  "prompts": [
    "2.4.0",
  ],
  "psl": [
    "1.8.0",
  ],
  "pump": [
    "3.0.0",
  ],
  "punycode": [
    "2.1.1",
  ],
  "qs": [
    "6.5.2",
  ],
  "react-is": [
    "17.0.1",
  ],
  "read-pkg": [
    "5.2.0",
  ],
  "read-pkg-up": [
    "7.0.1",
  ],
  "regex-not": [
    "1.0.2",
  ],
  "remove-trailing-separator": [
    "1.1.0",
  ],
  "repeat-element": [
    "1.1.3",
  ],
  "repeat-string": [
    "1.6.1",
  ],
  "request": [
    "2.88.2",
  ],
  "request-promise-core": [
    "1.1.4",
  ],
  "request-promise-native": [
    "1.0.9",
  ],
  "require-directory": [
    "2.1.1",
  ],
  "require-main-filename": [
    "2.0.0",
  ],
  "resolve": [
    "1.20.0",
  ],
  "resolve-cwd": [
    "3.0.0",
  ],
  "resolve-from": [
    "5.0.0",
  ],
  "resolve-url": [
    "0.2.1",
  ],
  "ret": [
    "0.1.15",
  ],
  "rimraf": [
    "3.0.2",
  ],
  "rsvp": [
    "4.8.5",
  ],
  "safe-buffer": [
    "5.1.2",
    "5.2.1",
  ],
  "safe-regex": [
    "1.1.0",
  ],
  "safer-buffer": [
    "2.1.2",
  ],
  "sane": [
    "4.1.0",
  ],
  "sanitize-filename": [
    "1.6.3",
  ],
  "saxes": [
    "5.0.1",
  ],
  "semver": [
    "5.7.1",
    "6.3.0",
    "7.3.4",
  ],
  "set-blocking": [
    "2.0.0",
  ],
  "set-value": [
    "2.0.1",
  ],
  "shebang-command": [
    "1.2.0",
    "2.0.0",
  ],
  "shebang-regex": [
    "1.0.0",
    "3.0.0",
  ],
  "shellwords": [
    "0.1.1",
  ],
  "signal-exit": [
    "3.0.3",
  ],
  "sisteransi": [
    "1.0.5",
  ],
  "slash": [
    "3.0.0",
  ],
  "snapdragon": [
    "0.8.2",
  ],
  "snapdragon-node": [
    "2.1.1",
  ],
  "snapdragon-util": [
    "3.0.1",
  ],
  "source-map": [
    "0.5.7",
    "0.6.1",
    "0.7.3",
  ],
  "source-map-resolve": [
    "0.5.3",
  ],
  "source-map-support": [
    "0.5.19",
  ],
  "source-map-url": [
    "0.4.1",
  ],
  "spdx-correct": [
    "3.1.1",
  ],
  "spdx-exceptions": [
    "2.3.0",
  ],
  "spdx-expression-parse": [
    "3.0.1",
  ],
  "spdx-license-ids": [
    "3.0.7",
  ],
  "split-string": [
    "3.1.0",
  ],
  "sprintf-js": [
    "1.0.3",
  ],
  "sshpk": [
    "1.16.1",
  ],
  "stack-utils": [
    "2.0.3",
  ],
  "stat-mode": [
    "1.0.0",
  ],
  "static-extend": [
    "0.1.2",
  ],
  "stealthy-require": [
    "1.1.1",
  ],
  "string-length": [
    "4.0.1",
  ],
  "string-width": [
    "4.2.0",
  ],
  "strip-ansi": [
    "6.0.0",
  ],
  "strip-bom": [
    "4.0.0",
  ],
  "strip-eof": [
    "1.0.0",
  ],
  "strip-final-newline": [
    "2.0.0",
  ],
  "supports-color": [
    "5.5.0",
    "7.2.0",
  ],
  "supports-hyperlinks": [
    "2.1.0",
  ],
  "symbol-tree": [
    "3.2.4",
  ],
  "terminal-link": [
    "2.1.1",
  ],
  "test-exclude": [
    "6.0.0",
  ],
  "throat": [
    "5.0.0",
  ],
  "tmpl": [
    "1.0.4",
  ],
  "to-fast-properties": [
    "2.0.0",
  ],
  "to-object-path": [
    "0.3.0",
  ],
  "to-regex": [
    "3.0.2",
  ],
  "to-regex-range": [
    "2.1.1",
    "5.0.1",
  ],
  "tough-cookie": [
    "2.5.0",
    "3.0.1",
  ],
  "tr46": [
    "2.0.2",
  ],
  "truncate-utf8-bytes": [
    "1.0.2",
  ],
  "ts-jest": [
    "26.5.1",
  ],
  "ts-type": [
    "1.2.34",
  ],
  "tunnel-agent": [
    "0.6.0",
  ],
  "tweetnacl": [
    "0.14.5",
  ],
  "type-check": [
    "0.3.2",
  ],
  "type-detect": [
    "4.0.8",
  ],
  "type-fest": [
    "0.6.0",
    "0.8.1",
    "0.11.0",
  ],
  "typedarray-dts": [
    "1.0.0",
  ],
  "typedarray-to-buffer": [
    "3.1.5",
  ],
  "union-value": [
    "1.0.1",
  ],
  "universalify": [
    "2.0.0",
  ],
  "unset-value": [
    "1.0.0",
  ],
  "upath": [
    "2.0.1",
  ],
  "uri-js": [
    "4.4.1",
  ],
  "urix": [
    "0.1.0",
  ],
  "use": [
    "3.1.1",
  ],
  "utf8-byte-length": [
    "1.0.4",
  ],
  "uuid": [
    "3.4.0",
    "8.3.2",
  ],
  "v8-to-istanbul": [
    "7.1.0",
  ],
  "validate-npm-package-license": [
    "3.0.4",
  ],
  "verror": [
    "1.10.0",
  ],
  "w3c-hr-time": [
    "1.0.2",
  ],
  "w3c-xmlserializer": [
    "2.0.0",
  ],
  "walker": [
    "1.0.7",
  ],
  "webidl-conversions": [
    "5.0.0",
    "6.1.0",
  ],
  "whatwg-encoding": [
    "1.0.5",
  ],
  "whatwg-mimetype": [
    "2.3.0",
  ],
  "whatwg-url": [
    "8.4.0",
  ],
  "which": [
    "1.3.1",
    "2.0.2",
  ],
  "which-module": [
    "2.0.0",
  ],
  "word-wrap": [
    "1.2.3",
  ],
  "wrap-ansi": [
    "6.2.0",
  ],
  "wrappy": [
    "1.0.2",
  ],
  "write-file-atomic": [
    "3.0.3",
  ],
  "ws": [
    "7.4.3",
  ],
  "xml-name-validator": [
    "3.0.0",
  ],
  "xmlchars": [
    "2.2.0",
  ],
  "y18n": [
    "4.0.1",
  ],
  "yallist": [
    "4.0.0",
  ],
  "yargs": [
    "15.4.1",
  ],
  "yargs-parser": [
    "18.1.3",
    "20.2.4",
  ],
}
`;

exports[`buildComputedPackage a/v2.lock 1`] = `
{
  "@bluelovers/tsconfig": [
    "1.0.19",
    "1.0.20",
  ],
  "@types/color-name": [
    "1.1.1",
  ],
  "@types/node": [
    "14.0.27",
  ],
  "ansi-colors": [
    "3.2.4",
  ],
  "ansi-regex": [
    "2.1.1",
    "3.0.0",
  ],
  "ansi-styles": [
    "4.2.1",
  ],
  "camelcase": [
    "5.3.1",
  ],
  "chalk": [
    "4.1.0",
  ],
  "cliui": [
    "4.1.0",
  ],
  "code-point-at": [
    "1.1.0",
  ],
  "color-convert": [
    "2.0.1",
  ],
  "color-name": [
    "1.1.4",
  ],
  "cross-spawn": [
    "6.0.5",
  ],
  "decamelize": [
    "1.2.0",
  ],
  "end-of-stream": [
    "1.4.4",
  ],
  "execa": [
    "1.0.0",
  ],
  "find-up": [
    "3.0.0",
  ],
  "fmake": [
    "0.1.3",
  ],
  "get-caller-file": [
    "1.0.3",
  ],
  "get-stream": [
    "4.1.0",
  ],
  "has-flag": [
    "4.0.0",
  ],
  "invert-kv": [
    "2.0.0",
  ],
  "is-fullwidth-code-point": [
    "1.0.0",
    "2.0.0",
  ],
  "is-stream": [
    "1.1.0",
  ],
  "isexe": [
    "2.0.0",
  ],
  "lcid": [
    "2.0.0",
  ],
  "locate-path": [
    "3.0.0",
  ],
  "map-age-cleaner": [
    "0.1.3",
  ],
  "mem": [
    "4.3.0",
  ],
  "mimic-fn": [
    "2.1.0",
  ],
  "nice-try": [
    "1.0.5",
  ],
  "npm-run-path": [
    "2.0.2",
  ],
  "number-is-nan": [
    "1.0.1",
  ],
  "once": [
    "1.4.0",
  ],
  "os-locale": [
    "3.1.0",
  ],
  "p-defer": [
    "1.0.0",
  ],
  "p-finally": [
    "1.0.0",
  ],
  "p-is-promise": [
    "2.1.0",
  ],
  "p-limit": [
    "2.3.0",
  ],
  "p-locate": [
    "3.0.0",
  ],
  "p-try": [
    "2.2.0",
  ],
  "path-exists": [
    "3.0.0",
  ],
  "path-key": [
    "2.0.1",
  ],
  "pump": [
    "3.0.0",
  ],
  "require-directory": [
    "2.1.1",
  ],
  "require-main-filename": [
    "1.0.1",
  ],
  "semver": [
    "5.7.1",
  ],
  "set-blocking": [
    "2.0.0",
  ],
  "shebang-command": [
    "1.2.0",
  ],
  "shebang-regex": [
    "1.0.0",
  ],
  "signal-exit": [
    "3.0.3",
  ],
  "string-width": [
    "1.0.2",
    "2.1.1",
  ],
  "strip-ansi": [
    "3.0.1",
    "4.0.0",
  ],
  "strip-eof": [
    "1.0.0",
  ],
  "supports-color": [
    "7.1.0",
  ],
  "which": [
    "1.3.1",
  ],
  "which-module": [
    "2.0.0",
  ],
  "wrap-ansi": [
    "2.1.0",
  ],
  "wrappy": [
    "1.0.2",
  ],
  "ws-yarn-v2-test": [
    "workspace:.",
  ],
  "y18n": [
    "4.0.0",
  ],
  "yargs": [
    "12.0.5",
  ],
  "yargs-parser": [
    "11.1.1",
  ],
  "yarn": [
    "2.0.0-rc.27",
  ],
}
`;

exports[`buildComputedPackage a/v3/yarn.lock 1`] = `
{
  "@ampproject/remapping": [
    "2.2.0",
  ],
  "@babel/code-frame": [
    "7.18.6",
  ],
  "@babel/compat-data": [
    "7.18.8",
  ],
  "@babel/core": [
    "7.18.10",
  ],
  "@babel/generator": [
    "7.18.12",
  ],
  "@babel/helper-compilation-targets": [
    "7.18.9",
  ],
  "@babel/helper-environment-visitor": [
    "7.18.9",
  ],
  "@babel/helper-function-name": [
    "7.18.9",
  ],
  "@babel/helper-hoist-variables": [
    "7.18.6",
  ],
  "@babel/helper-module-imports": [
    "7.18.6",
  ],
  "@babel/helper-module-transforms": [
    "7.18.9",
  ],
  "@babel/helper-plugin-utils": [
    "7.14.5",
  ],
  "@babel/helper-simple-access": [
    "7.18.6",
  ],
  "@babel/helper-split-export-declaration": [
    "7.18.6",
  ],
  "@babel/helper-string-parser": [
    "7.18.10",
  ],
  "@babel/helper-validator-identifier": [
    "7.18.6",
  ],
  "@babel/helper-validator-option": [
    "7.18.6",
  ],
  "@babel/helpers": [
    "7.18.9",
  ],
  "@babel/highlight": [
    "7.18.6",
  ],
  "@babel/parser": [
    "7.18.11",
  ],
  "@babel/plugin-syntax-async-generators": [
    "7.8.4",
  ],
  "@babel/plugin-syntax-bigint": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-class-properties": [
    "7.12.13",
  ],
  "@babel/plugin-syntax-import-meta": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-json-strings": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-logical-assignment-operators": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-nullish-coalescing-operator": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-numeric-separator": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-object-rest-spread": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-catch-binding": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-chaining": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-top-level-await": [
    "7.14.5",
  ],
  "@babel/plugin-syntax-typescript": [
    "7.14.5",
  ],
  "@babel/template": [
    "7.18.10",
  ],
  "@babel/traverse": [
    "7.18.11",
  ],
  "@babel/types": [
    "7.18.10",
  ],
  "@bcoe/v8-coverage": [
    "0.2.3",
  ],
  "@bluelovers/tsconfig": [
    "1.0.30",
  ],
  "@gar/promisify": [
    "1.1.3",
  ],
  "@istanbuljs/load-nyc-config": [
    "1.1.0",
  ],
  "@istanbuljs/schema": [
    "0.1.3",
  ],
  "@jest/console": [
    "27.5.1",
  ],
  "@jest/core": [
    "27.5.1",
  ],
  "@jest/environment": [
    "27.5.1",
  ],
  "@jest/fake-timers": [
    "27.5.1",
  ],
  "@jest/globals": [
    "27.5.1",
  ],
  "@jest/reporters": [
    "27.5.1",
  ],
  "@jest/source-map": [
    "27.5.1",
  ],
  "@jest/test-result": [
    "27.5.1",
  ],
  "@jest/test-sequencer": [
    "27.5.1",
  ],
  "@jest/transform": [
    "27.5.1",
  ],
  "@jest/types": [
    "26.6.2",
    "27.5.1",
  ],
  "@jridgewell/gen-mapping": [
    "0.1.1",
    "0.3.2",
  ],
  "@jridgewell/resolve-uri": [
    "3.1.0",
  ],
  "@jridgewell/set-array": [
    "1.1.2",
  ],
  "@jridgewell/sourcemap-codec": [
    "1.4.14",
  ],
  "@jridgewell/trace-mapping": [
    "0.3.14",
  ],
  "@npmcli/fs": [
    "2.1.1",
  ],
  "@npmcli/move-file": [
    "2.0.0",
  ],
  "@sinonjs/commons": [
    "1.8.3",
  ],
  "@sinonjs/fake-timers": [
    "8.1.0",
  ],
  "@tootallnate/once": [
    "1.1.2",
    "2.0.0",
  ],
  "@types/babel__core": [
    "7.1.14",
    "7.1.19",
  ],
  "@types/babel__generator": [
    "7.6.2",
  ],
  "@types/babel__template": [
    "7.4.0",
  ],
  "@types/babel__traverse": [
    "7.14.0",
    "7.18.0",
  ],
  "@types/graceful-fs": [
    "4.1.5",
  ],
  "@types/istanbul-lib-coverage": [
    "2.0.3",
  ],
  "@types/istanbul-lib-report": [
    "3.0.0",
  ],
  "@types/istanbul-reports": [
    "3.0.1",
  ],
  "@types/jest": [
    "26.0.24",
  ],
  "@types/node": [
    "15.12.5",
  ],
  "@types/prettier": [
    "2.3.0",
  ],
  "@types/stack-utils": [
    "2.0.0",
  ],
  "@types/yargs": [
    "15.0.14",
    "16.0.4",
  ],
  "@types/yargs-parser": [
    "20.2.0",
  ],
  "abab": [
    "2.0.6",
  ],
  "abbrev": [
    "1.1.1",
  ],
  "acorn": [
    "7.4.1",
    "8.8.0",
  ],
  "acorn-globals": [
    "6.0.0",
  ],
  "acorn-walk": [
    "7.2.0",
  ],
  "agent-base": [
    "6.0.2",
  ],
  "agentkeepalive": [
    "4.2.1",
  ],
  "aggregate-error": [
    "3.1.0",
  ],
  "ansi-escapes": [
    "4.3.2",
  ],
  "ansi-regex": [
    "5.0.1",
  ],
  "ansi-styles": [
    "3.2.1",
    "4.3.0",
    "5.2.0",
  ],
  "anymatch": [
    "3.1.2",
  ],
  "aproba": [
    "2.0.0",
  ],
  "are-we-there-yet": [
    "3.0.1",
  ],
  "argparse": [
    "1.0.10",
  ],
  "asynckit": [
    "0.4.0",
  ],
  "babel-jest": [
    "27.5.1",
  ],
  "babel-plugin-istanbul": [
    "6.1.1",
  ],
  "babel-plugin-jest-hoist": [
    "27.5.1",
  ],
  "babel-preset-current-node-syntax": [
    "1.0.1",
  ],
  "babel-preset-jest": [
    "27.5.1",
  ],
  "balanced-match": [
    "1.0.2",
  ],
  "brace-expansion": [
    "1.1.11",
    "2.0.1",
  ],
  "braces": [
    "3.0.2",
  ],
  "browser-process-hrtime": [
    "1.0.0",
  ],
  "browserslist": [
    "4.21.3",
  ],
  "bser": [
    "2.1.1",
  ],
  "buffer-from": [
    "1.1.1",
  ],
  "cacache": [
    "16.1.1",
  ],
  "callsites": [
    "3.1.0",
  ],
  "camelcase": [
    "5.3.1",
    "6.2.0",
  ],
  "caniuse-lite": [
    "1.0.30001375",
  ],
  "chalk": [
    "2.4.2",
    "4.1.1",
  ],
  "char-regex": [
    "1.0.2",
  ],
  "chownr": [
    "2.0.0",
  ],
  "ci-info": [
    "3.3.2",
  ],
  "cjs-module-lexer": [
    "1.2.1",
  ],
  "clean-stack": [
    "2.2.0",
  ],
  "cliui": [
    "6.0.0",
    "7.0.4",
  ],
  "co": [
    "4.6.0",
  ],
  "collect-v8-coverage": [
    "1.0.1",
  ],
  "color-convert": [
    "1.9.3",
    "2.0.1",
  ],
  "color-name": [
    "1.1.3",
    "1.1.4",
  ],
  "color-support": [
    "1.1.3",
  ],
  "combined-stream": [
    "1.0.8",
  ],
  "concat-map": [
    "0.0.1",
  ],
  "console-control-strings": [
    "1.1.0",
  ],
  "convert-source-map": [
    "1.8.0",
  ],
  "cross-spawn": [
    "7.0.3",
  ],
  "cssom": [
    "0.3.8",
    "0.4.4",
  ],
  "cssstyle": [
    "2.3.0",
  ],
  "data-urls": [
    "2.0.0",
  ],
  "debug": [
    "4.3.1",
    "4.3.4",
  ],
  "decamelize": [
    "1.2.0",
  ],
  "decimal.js": [
    "10.3.1",
  ],
  "dedent": [
    "0.7.0",
  ],
  "deep-is": [
    "0.1.4",
  ],
  "deepmerge": [
    "4.2.2",
  ],
  "delayed-stream": [
    "1.0.0",
  ],
  "delegates": [
    "1.0.0",
  ],
  "depd": [
    "1.1.2",
  ],
  "detect-newline": [
    "3.1.0",
  ],
  "diff-sequences": [
    "26.6.2",
    "27.5.1",
  ],
  "domexception": [
    "2.0.1",
  ],
  "dts-bundle-generator": [
    "5.9.0",
  ],
  "electron-to-chromium": [
    "1.4.214",
  ],
  "emittery": [
    "0.8.1",
  ],
  "emoji-regex": [
    "8.0.0",
  ],
  "encoding": [
    "0.1.13",
  ],
  "env-paths": [
    "2.2.1",
  ],
  "err-code": [
    "2.0.3",
  ],
  "error-ex": [
    "1.3.2",
  ],
  "escalade": [
    "3.1.1",
  ],
  "escape-string-regexp": [
    "1.0.5",
    "2.0.0",
  ],
  "escodegen": [
    "2.0.0",
  ],
  "esprima": [
    "4.0.1",
  ],
  "estraverse": [
    "5.3.0",
  ],
  "esutils": [
    "2.0.3",
  ],
  "execa": [
    "5.1.1",
  ],
  "exit": [
    "0.1.2",
  ],
  "expect": [
    "27.5.1",
  ],
  "fast-json-stable-stringify": [
    "2.1.0",
  ],
  "fast-levenshtein": [
    "2.0.6",
  ],
  "fb-watchman": [
    "2.0.1",
  ],
  "fill-range": [
    "7.0.1",
  ],
  "find-up": [
    "4.1.0",
  ],
  "form-data": [
    "3.0.1",
  ],
  "fs-minipass": [
    "2.1.0",
  ],
  "fs.realpath": [
    "1.0.0",
  ],
  "fsevents": [
    "2.3.2",
  ],
  "fsevents>::version=2.3.2&hash=18f3a7": [
    "2.3.2",
  ],
  "function-bind": [
    "1.1.1",
  ],
  "gauge": [
    "4.0.4",
  ],
  "gensync": [
    "1.0.0-beta.2",
  ],
  "get-caller-file": [
    "2.0.5",
  ],
  "get-package-type": [
    "0.1.0",
  ],
  "get-stream": [
    "6.0.1",
  ],
  "glob": [
    "7.1.7",
    "7.2.3",
    "8.0.3",
  ],
  "globals": [
    "11.12.0",
  ],
  "graceful-fs": [
    "4.2.10",
  ],
  "has": [
    "1.0.3",
  ],
  "has-flag": [
    "3.0.0",
    "4.0.0",
  ],
  "has-unicode": [
    "2.0.1",
  ],
  "html-encoding-sniffer": [
    "2.0.1",
  ],
  "html-escaper": [
    "2.0.2",
  ],
  "http-cache-semantics": [
    "4.1.0",
  ],
  "http-proxy-agent": [
    "4.0.1",
    "5.0.0",
  ],
  "https-proxy-agent": [
    "5.0.1",
  ],
  "human-signals": [
    "2.1.0",
  ],
  "humanize-ms": [
    "1.2.1",
  ],
  "iconv-lite": [
    "0.4.24",
    "0.6.3",
  ],
  "import-local": [
    "3.0.2",
  ],
  "imurmurhash": [
    "0.1.4",
  ],
  "indent-string": [
    "4.0.0",
  ],
  "infer-owner": [
    "1.0.4",
  ],
  "inflight": [
    "1.0.6",
  ],
  "inherits": [
    "2.0.4",
  ],
  "ip": [
    "2.0.0",
  ],
  "is-arrayish": [
    "0.2.1",
  ],
  "is-core-module": [
    "2.4.0",
  ],
  "is-fullwidth-code-point": [
    "3.0.0",
  ],
  "is-generator-fn": [
    "2.1.0",
  ],
  "is-lambda": [
    "1.0.1",
  ],
  "is-number": [
    "7.0.0",
  ],
  "is-potential-custom-element-name": [
    "1.0.1",
  ],
  "is-stream": [
    "2.0.0",
  ],
  "is-typedarray": [
    "1.0.0",
  ],
  "isexe": [
    "2.0.0",
  ],
  "istanbul-lib-coverage": [
    "3.2.0",
  ],
  "istanbul-lib-instrument": [
    "5.2.0",
  ],
  "istanbul-lib-report": [
    "3.0.0",
  ],
  "istanbul-lib-source-maps": [
    "4.0.0",
  ],
  "istanbul-reports": [
    "3.1.5",
  ],
  "jest": [
    "27.5.1",
  ],
  "jest-changed-files": [
    "27.5.1",
  ],
  "jest-circus": [
    "27.5.1",
  ],
  "jest-cli": [
    "27.5.1",
  ],
  "jest-config": [
    "27.5.1",
  ],
  "jest-diff": [
    "26.6.2",
    "27.5.1",
  ],
  "jest-docblock": [
    "27.5.1",
  ],
  "jest-each": [
    "27.5.1",
  ],
  "jest-environment-jsdom": [
    "27.5.1",
  ],
  "jest-environment-node": [
    "27.5.1",
  ],
  "jest-get-type": [
    "26.3.0",
    "27.5.1",
  ],
  "jest-haste-map": [
    "27.5.1",
  ],
  "jest-jasmine2": [
    "27.5.1",
  ],
  "jest-leak-detector": [
    "27.5.1",
  ],
  "jest-matcher-utils": [
    "27.5.1",
  ],
  "jest-message-util": [
    "27.5.1",
  ],
  "jest-mock": [
    "27.5.1",
  ],
  "jest-pnp-resolver": [
    "1.2.2",
  ],
  "jest-regex-util": [
    "27.5.1",
  ],
  "jest-resolve": [
    "27.5.1",
  ],
  "jest-resolve-dependencies": [
    "27.5.1",
  ],
  "jest-runner": [
    "27.5.1",
  ],
  "jest-runtime": [
    "27.5.1",
  ],
  "jest-serializer": [
    "27.5.1",
  ],
  "jest-snapshot": [
    "27.5.1",
  ],
  "jest-util": [
    "27.5.1",
  ],
  "jest-validate": [
    "27.5.1",
  ],
  "jest-watcher": [
    "27.5.1",
  ],
  "jest-worker": [
    "27.5.1",
  ],
  "js-tokens": [
    "4.0.0",
  ],
  "js-yaml": [
    "3.14.1",
  ],
  "jsdom": [
    "16.7.0",
  ],
  "jsesc": [
    "2.5.2",
  ],
  "json-parse-even-better-errors": [
    "2.3.1",
  ],
  "json5": [
    "2.2.1",
  ],
  "kleur": [
    "3.0.3",
  ],
  "leven": [
    "3.1.0",
  ],
  "levn": [
    "0.3.0",
  ],
  "lines-and-columns": [
    "1.2.4",
  ],
  "locate-path": [
    "5.0.0",
  ],
  "lodash": [
    "4.17.21",
  ],
  "lru-cache": [
    "6.0.0",
    "7.13.2",
  ],
  "make-dir": [
    "3.1.0",
  ],
  "make-fetch-happen": [
    "10.2.0",
  ],
  "makeerror": [
    "1.0.12",
  ],
  "merge-stream": [
    "2.0.0",
  ],
  "micromatch": [
    "4.0.4",
  ],
  "mime-db": [
    "1.52.0",
  ],
  "mime-types": [
    "2.1.35",
  ],
  "mimic-fn": [
    "2.1.0",
  ],
  "minimatch": [
    "3.0.4",
    "3.1.2",
    "5.1.0",
  ],
  "minipass": [
    "3.3.5",
  ],
  "minipass-collect": [
    "1.0.2",
  ],
  "minipass-fetch": [
    "2.1.0",
  ],
  "minipass-flush": [
    "1.0.5",
  ],
  "minipass-pipeline": [
    "1.2.4",
  ],
  "minipass-sized": [
    "1.0.3",
  ],
  "minizlib": [
    "2.1.2",
  ],
  "mkdirp": [
    "1.0.4",
  ],
  "ms": [
    "2.1.2",
    "2.1.3",
  ],
  "natural-compare": [
    "1.4.0",
  ],
  "negotiator": [
    "0.6.3",
  ],
  "node-gyp": [
    "9.1.0",
  ],
  "node-int64": [
    "0.4.0",
  ],
  "node-releases": [
    "2.0.6",
  ],
  "nopt": [
    "5.0.0",
  ],
  "normalize-path": [
    "3.0.0",
  ],
  "npm-run-path": [
    "4.0.1",
  ],
  "npmlog": [
    "6.0.2",
  ],
  "nwsapi": [
    "2.2.1",
  ],
  "once": [
    "1.4.0",
  ],
  "onetime": [
    "5.1.2",
  ],
  "optionator": [
    "0.8.3",
  ],
  "p-limit": [
    "2.3.0",
  ],
  "p-locate": [
    "4.1.0",
  ],
  "p-map": [
    "4.0.0",
  ],
  "p-try": [
    "2.2.0",
  ],
  "parse-json": [
    "5.2.0",
  ],
  "parse5": [
    "6.0.1",
  ],
  "path-exists": [
    "4.0.0",
  ],
  "path-is-absolute": [
    "1.0.1",
  ],
  "path-key": [
    "3.1.1",
  ],
  "path-parse": [
    "1.0.7",
  ],
  "picocolors": [
    "1.0.0",
  ],
  "picomatch": [
    "2.3.0",
  ],
  "pirates": [
    "4.0.5",
  ],
  "pkg-dir": [
    "4.2.0",
  ],
  "prelude-ls": [
    "1.1.2",
  ],
  "pretty-format": [
    "26.6.2",
    "27.5.1",
  ],
  "promise-inflight": [
    "1.0.1",
  ],
  "promise-retry": [
    "2.0.1",
  ],
  "prompts": [
    "2.4.1",
  ],
  "psl": [
    "1.9.0",
  ],
  "punycode": [
    "2.1.1",
  ],
  "react-is": [
    "17.0.2",
  ],
  "readable-stream": [
    "3.6.0",
  ],
  "require-directory": [
    "2.1.1",
  ],
  "require-main-filename": [
    "2.0.0",
  ],
  "resolve": [
    "1.20.0",
  ],
  "resolve-cwd": [
    "3.0.0",
  ],
  "resolve-from": [
    "5.0.0",
  ],
  "resolve.exports": [
    "1.1.0",
  ],
  "resolve>::version=1.20.0&hash=07638b": [
    "1.20.0",
  ],
  "retry": [
    "0.12.0",
  ],
  "rimraf": [
    "3.0.2",
  ],
  "safe-buffer": [
    "5.1.2",
    "5.2.1",
  ],
  "safer-buffer": [
    "2.1.2",
  ],
  "saxes": [
    "5.0.1",
  ],
  "semver": [
    "6.3.0",
    "7.3.7",
  ],
  "set-blocking": [
    "2.0.0",
  ],
  "shebang-command": [
    "2.0.0",
  ],
  "shebang-regex": [
    "3.0.0",
  ],
  "signal-exit": [
    "3.0.7",
  ],
  "sisteransi": [
    "1.0.5",
  ],
  "slash": [
    "3.0.0",
  ],
  "smart-buffer": [
    "4.2.0",
  ],
  "socks": [
    "2.7.0",
  ],
  "socks-proxy-agent": [
    "7.0.0",
  ],
  "source-map": [
    "0.6.1",
    "0.7.4",
  ],
  "source-map-support": [
    "0.5.21",
  ],
  "split-smartly2": [
    "workspace:.",
  ],
  "sprintf-js": [
    "1.0.3",
  ],
  "ssri": [
    "9.0.1",
  ],
  "stack-utils": [
    "2.0.3",
  ],
  "string-length": [
    "4.0.2",
  ],
  "string-width": [
    "4.2.3",
  ],
  "string_decoder": [
    "1.3.0",
  ],
  "strip-ansi": [
    "6.0.1",
  ],
  "strip-bom": [
    "4.0.0",
  ],
  "strip-final-newline": [
    "2.0.0",
  ],
  "strip-json-comments": [
    "3.1.1",
  ],
  "supports-color": [
    "5.5.0",
    "7.2.0",
    "8.1.1",
  ],
  "supports-hyperlinks": [
    "2.2.0",
  ],
  "symbol-tree": [
    "3.2.4",
  ],
  "tar": [
    "6.1.11",
  ],
  "terminal-link": [
    "2.1.1",
  ],
  "test-exclude": [
    "6.0.0",
  ],
  "throat": [
    "6.0.1",
  ],
  "tmpl": [
    "1.0.5",
  ],
  "to-fast-properties": [
    "2.0.0",
  ],
  "to-regex-range": [
    "5.0.1",
  ],
  "tough-cookie": [
    "4.0.0",
  ],
  "tr46": [
    "2.1.0",
  ],
  "ts-type": [
    "1.2.40",
  ],
  "tslib": [
    "2.4.0",
  ],
  "type-check": [
    "0.3.2",
  ],
  "type-detect": [
    "4.0.8",
  ],
  "type-fest": [
    "0.21.3",
  ],
  "typedarray-dts": [
    "1.0.0",
  ],
  "typedarray-to-buffer": [
    "3.1.5",
  ],
  "typescript": [
    "4.7.4",
  ],
  "typescript>::version=4.7.4&hash=f456af": [
    "4.7.4",
  ],
  "unique-filename": [
    "1.1.1",
  ],
  "unique-slug": [
    "2.0.2",
  ],
  "universalify": [
    "0.1.2",
  ],
  "update-browserslist-db": [
    "1.0.5",
  ],
  "util-deprecate": [
    "1.0.2",
  ],
  "v8-to-istanbul": [
    "8.1.1",
  ],
  "w3c-hr-time": [
    "1.0.2",
  ],
  "w3c-xmlserializer": [
    "2.0.0",
  ],
  "walker": [
    "1.0.8",
  ],
  "webidl-conversions": [
    "5.0.0",
    "6.1.0",
  ],
  "whatwg-encoding": [
    "1.0.5",
  ],
  "whatwg-mimetype": [
    "2.3.0",
  ],
  "whatwg-url": [
    "8.7.0",
  ],
  "which": [
    "2.0.2",
  ],
  "which-module": [
    "2.0.0",
  ],
  "wide-align": [
    "1.1.5",
  ],
  "word-wrap": [
    "1.2.3",
  ],
  "wrap-ansi": [
    "6.2.0",
    "7.0.0",
  ],
  "wrappy": [
    "1.0.2",
  ],
  "write-file-atomic": [
    "3.0.3",
  ],
  "ws": [
    "7.5.9",
  ],
  "xml-name-validator": [
    "3.0.0",
  ],
  "xmlchars": [
    "2.2.0",
  ],
  "y18n": [
    "4.0.3",
    "5.0.8",
  ],
  "yallist": [
    "4.0.0",
  ],
  "yargs": [
    "15.4.1",
    "16.2.0",
  ],
  "yargs-parser": [
    "18.1.3",
    "20.2.9",
  ],
}
`;

exports[`buildComputedPackage a/v3/yarn-2.lock 1`] = `
{
  "@ampproject/remapping": [
    "2.2.0",
  ],
  "@babel/code-frame": [
    "7.18.6",
  ],
  "@babel/compat-data": [
    "7.18.8",
  ],
  "@babel/core": [
    "7.18.10",
  ],
  "@babel/generator": [
    "7.18.12",
  ],
  "@babel/helper-compilation-targets": [
    "7.18.9",
  ],
  "@babel/helper-environment-visitor": [
    "7.18.9",
  ],
  "@babel/helper-function-name": [
    "7.18.9",
  ],
  "@babel/helper-hoist-variables": [
    "7.18.6",
  ],
  "@babel/helper-module-imports": [
    "7.18.6",
  ],
  "@babel/helper-module-transforms": [
    "7.18.9",
  ],
  "@babel/helper-plugin-utils": [
    "7.14.5",
  ],
  "@babel/helper-simple-access": [
    "7.18.6",
  ],
  "@babel/helper-split-export-declaration": [
    "7.18.6",
  ],
  "@babel/helper-string-parser": [
    "7.18.10",
  ],
  "@babel/helper-validator-identifier": [
    "7.18.6",
  ],
  "@babel/helper-validator-option": [
    "7.18.6",
  ],
  "@babel/helpers": [
    "7.18.9",
  ],
  "@babel/highlight": [
    "7.18.6",
  ],
  "@babel/parser": [
    "7.18.11",
  ],
  "@babel/plugin-syntax-async-generators": [
    "7.8.4",
  ],
  "@babel/plugin-syntax-bigint": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-class-properties": [
    "7.12.13",
  ],
  "@babel/plugin-syntax-import-meta": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-json-strings": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-logical-assignment-operators": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-nullish-coalescing-operator": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-numeric-separator": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-object-rest-spread": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-catch-binding": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-chaining": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-top-level-await": [
    "7.14.5",
  ],
  "@babel/plugin-syntax-typescript": [
    "7.14.5",
  ],
  "@babel/template": [
    "7.18.10",
  ],
  "@babel/traverse": [
    "7.18.11",
  ],
  "@babel/types": [
    "7.18.10",
  ],
  "@bcoe/v8-coverage": [
    "0.2.3",
  ],
  "@bluelovers/tsconfig": [
    "1.0.30",
  ],
  "@gar/promisify": [
    "1.1.3",
  ],
  "@istanbuljs/load-nyc-config": [
    "1.1.0",
  ],
  "@istanbuljs/schema": [
    "0.1.3",
  ],
  "@jest/console": [
    "28.1.3",
  ],
  "@jest/core": [
    "28.1.3",
  ],
  "@jest/environment": [
    "28.1.3",
  ],
  "@jest/expect": [
    "28.1.3",
  ],
  "@jest/expect-utils": [
    "28.1.3",
  ],
  "@jest/fake-timers": [
    "28.1.3",
  ],
  "@jest/globals": [
    "28.1.3",
  ],
  "@jest/reporters": [
    "28.1.3",
  ],
  "@jest/schemas": [
    "28.1.3",
  ],
  "@jest/source-map": [
    "28.1.2",
  ],
  "@jest/test-result": [
    "28.1.3",
  ],
  "@jest/test-sequencer": [
    "28.1.3",
  ],
  "@jest/transform": [
    "28.1.3",
  ],
  "@jest/types": [
    "28.1.3",
  ],
  "@jridgewell/gen-mapping": [
    "0.1.1",
    "0.3.2",
  ],
  "@jridgewell/resolve-uri": [
    "3.1.0",
  ],
  "@jridgewell/set-array": [
    "1.1.2",
  ],
  "@jridgewell/sourcemap-codec": [
    "1.4.14",
  ],
  "@jridgewell/trace-mapping": [
    "0.3.14",
  ],
  "@npmcli/fs": [
    "2.1.1",
  ],
  "@npmcli/move-file": [
    "2.0.0",
  ],
  "@sinclair/typebox": [
    "0.24.27",
  ],
  "@sinonjs/commons": [
    "1.8.3",
  ],
  "@sinonjs/fake-timers": [
    "9.1.2",
  ],
  "@tootallnate/once": [
    "2.0.0",
  ],
  "@types/babel__core": [
    "7.1.14",
  ],
  "@types/babel__generator": [
    "7.6.2",
  ],
  "@types/babel__template": [
    "7.4.0",
  ],
  "@types/babel__traverse": [
    "7.14.0",
  ],
  "@types/graceful-fs": [
    "4.1.5",
  ],
  "@types/istanbul-lib-coverage": [
    "2.0.3",
  ],
  "@types/istanbul-lib-report": [
    "3.0.0",
  ],
  "@types/istanbul-reports": [
    "3.0.1",
  ],
  "@types/jest": [
    "28.1.6",
  ],
  "@types/node": [
    "15.12.5",
  ],
  "@types/prettier": [
    "2.3.0",
  ],
  "@types/stack-utils": [
    "2.0.0",
  ],
  "@types/yargs": [
    "17.0.11",
  ],
  "@types/yargs-parser": [
    "20.2.0",
  ],
  "abbrev": [
    "1.1.1",
  ],
  "agent-base": [
    "6.0.2",
  ],
  "agentkeepalive": [
    "4.2.1",
  ],
  "aggregate-error": [
    "3.1.0",
  ],
  "ansi-escapes": [
    "4.3.2",
  ],
  "ansi-regex": [
    "5.0.1",
  ],
  "ansi-styles": [
    "3.2.1",
    "4.3.0",
    "5.2.0",
  ],
  "anymatch": [
    "3.1.2",
  ],
  "aproba": [
    "2.0.0",
  ],
  "are-we-there-yet": [
    "3.0.1",
  ],
  "argparse": [
    "1.0.10",
  ],
  "babel-jest": [
    "28.1.3",
  ],
  "babel-plugin-istanbul": [
    "6.1.1",
  ],
  "babel-plugin-jest-hoist": [
    "28.1.3",
  ],
  "babel-preset-current-node-syntax": [
    "1.0.1",
  ],
  "babel-preset-jest": [
    "28.1.3",
  ],
  "balanced-match": [
    "1.0.2",
  ],
  "brace-expansion": [
    "1.1.11",
    "2.0.1",
  ],
  "braces": [
    "3.0.2",
  ],
  "browserslist": [
    "4.21.3",
  ],
  "bser": [
    "2.1.1",
  ],
  "buffer-from": [
    "1.1.1",
  ],
  "cacache": [
    "16.1.1",
  ],
  "callsites": [
    "3.1.0",
  ],
  "camelcase": [
    "5.3.1",
    "6.2.0",
  ],
  "caniuse-lite": [
    "1.0.30001375",
  ],
  "chalk": [
    "2.4.2",
    "4.1.1",
  ],
  "char-regex": [
    "1.0.2",
  ],
  "chownr": [
    "2.0.0",
  ],
  "ci-info": [
    "3.3.2",
  ],
  "cjs-module-lexer": [
    "1.2.1",
  ],
  "clean-stack": [
    "2.2.0",
  ],
  "cliui": [
    "7.0.4",
  ],
  "co": [
    "4.6.0",
  ],
  "collect-v8-coverage": [
    "1.0.1",
  ],
  "color-convert": [
    "1.9.3",
    "2.0.1",
  ],
  "color-name": [
    "1.1.3",
    "1.1.4",
  ],
  "color-support": [
    "1.1.3",
  ],
  "concat-map": [
    "0.0.1",
  ],
  "console-control-strings": [
    "1.1.0",
  ],
  "convert-source-map": [
    "1.8.0",
  ],
  "cross-spawn": [
    "7.0.3",
  ],
  "debug": [
    "4.3.1",
    "4.3.4",
  ],
  "dedent": [
    "0.7.0",
  ],
  "deepmerge": [
    "4.2.2",
  ],
  "delegates": [
    "1.0.0",
  ],
  "depd": [
    "1.1.2",
  ],
  "detect-newline": [
    "3.1.0",
  ],
  "diff-sequences": [
    "28.1.1",
  ],
  "electron-to-chromium": [
    "1.4.214",
  ],
  "emittery": [
    "0.10.2",
  ],
  "emoji-regex": [
    "8.0.0",
  ],
  "encoding": [
    "0.1.13",
  ],
  "env-paths": [
    "2.2.1",
  ],
  "err-code": [
    "2.0.3",
  ],
  "error-ex": [
    "1.3.2",
  ],
  "escalade": [
    "3.1.1",
  ],
  "escape-string-regexp": [
    "1.0.5",
    "2.0.0",
  ],
  "esprima": [
    "4.0.1",
  ],
  "execa": [
    "5.1.1",
  ],
  "exit": [
    "0.1.2",
  ],
  "expect": [
    "28.1.3",
  ],
  "fast-json-stable-stringify": [
    "2.1.0",
  ],
  "fb-watchman": [
    "2.0.1",
  ],
  "fill-range": [
    "7.0.1",
  ],
  "find-up": [
    "4.1.0",
  ],
  "fs-minipass": [
    "2.1.0",
  ],
  "fs.realpath": [
    "1.0.0",
  ],
  "fsevents": [
    "2.3.2",
  ],
  "fsevents>::version=2.3.2&hash=18f3a7": [
    "2.3.2",
  ],
  "function-bind": [
    "1.1.1",
  ],
  "gauge": [
    "4.0.4",
  ],
  "gensync": [
    "1.0.0-beta.2",
  ],
  "get-caller-file": [
    "2.0.5",
  ],
  "get-package-type": [
    "0.1.0",
  ],
  "get-stream": [
    "6.0.1",
  ],
  "glob": [
    "7.1.7",
    "8.0.3",
  ],
  "globals": [
    "11.12.0",
  ],
  "graceful-fs": [
    "4.2.10",
  ],
  "has": [
    "1.0.3",
  ],
  "has-flag": [
    "3.0.0",
    "4.0.0",
  ],
  "has-unicode": [
    "2.0.1",
  ],
  "html-escaper": [
    "2.0.2",
  ],
  "http-cache-semantics": [
    "4.1.0",
  ],
  "http-proxy-agent": [
    "5.0.0",
  ],
  "https-proxy-agent": [
    "5.0.1",
  ],
  "human-signals": [
    "2.1.0",
  ],
  "humanize-ms": [
    "1.2.1",
  ],
  "iconv-lite": [
    "0.6.3",
  ],
  "import-local": [
    "3.0.2",
  ],
  "imurmurhash": [
    "0.1.4",
  ],
  "indent-string": [
    "4.0.0",
  ],
  "infer-owner": [
    "1.0.4",
  ],
  "inflight": [
    "1.0.6",
  ],
  "inherits": [
    "2.0.4",
  ],
  "ip": [
    "2.0.0",
  ],
  "is-arrayish": [
    "0.2.1",
  ],
  "is-core-module": [
    "2.4.0",
  ],
  "is-fullwidth-code-point": [
    "3.0.0",
  ],
  "is-generator-fn": [
    "2.1.0",
  ],
  "is-lambda": [
    "1.0.1",
  ],
  "is-number": [
    "7.0.0",
  ],
  "is-stream": [
    "2.0.0",
  ],
  "isexe": [
    "2.0.0",
  ],
  "istanbul-lib-coverage": [
    "3.2.0",
  ],
  "istanbul-lib-instrument": [
    "5.2.0",
  ],
  "istanbul-lib-report": [
    "3.0.0",
  ],
  "istanbul-lib-source-maps": [
    "4.0.0",
  ],
  "istanbul-reports": [
    "3.1.5",
  ],
  "jest": [
    "28.1.3",
  ],
  "jest-changed-files": [
    "28.1.3",
  ],
  "jest-circus": [
    "28.1.3",
  ],
  "jest-cli": [
    "28.1.3",
  ],
  "jest-config": [
    "28.1.3",
  ],
  "jest-diff": [
    "28.1.3",
  ],
  "jest-docblock": [
    "28.1.1",
  ],
  "jest-each": [
    "28.1.3",
  ],
  "jest-environment-node": [
    "28.1.3",
  ],
  "jest-get-type": [
    "28.0.2",
  ],
  "jest-haste-map": [
    "28.1.3",
  ],
  "jest-leak-detector": [
    "28.1.3",
  ],
  "jest-matcher-utils": [
    "28.1.3",
  ],
  "jest-message-util": [
    "28.1.3",
  ],
  "jest-mock": [
    "28.1.3",
  ],
  "jest-pnp-resolver": [
    "1.2.2",
  ],
  "jest-regex-util": [
    "28.0.2",
  ],
  "jest-resolve": [
    "28.1.3",
  ],
  "jest-resolve-dependencies": [
    "28.1.3",
  ],
  "jest-runner": [
    "28.1.3",
  ],
  "jest-runtime": [
    "28.1.3",
  ],
  "jest-snapshot": [
    "28.1.3",
  ],
  "jest-util": [
    "28.1.3",
  ],
  "jest-validate": [
    "28.1.3",
  ],
  "jest-watcher": [
    "28.1.3",
  ],
  "jest-worker": [
    "28.1.3",
  ],
  "js-tokens": [
    "4.0.0",
  ],
  "js-yaml": [
    "3.14.1",
  ],
  "jsesc": [
    "2.5.2",
  ],
  "json-parse-even-better-errors": [
    "2.3.1",
  ],
  "json5": [
    "2.2.1",
  ],
  "kleur": [
    "3.0.3",
  ],
  "leven": [
    "3.1.0",
  ],
  "lines-and-columns": [
    "1.2.4",
  ],
  "locate-path": [
    "5.0.0",
  ],
  "lru-cache": [
    "6.0.0",
    "7.13.2",
  ],
  "make-dir": [
    "3.1.0",
  ],
  "make-fetch-happen": [
    "10.2.0",
  ],
  "makeerror": [
    "1.0.12",
  ],
  "merge-stream": [
    "2.0.0",
  ],
  "micromatch": [
    "4.0.4",
  ],
  "mimic-fn": [
    "2.1.0",
  ],
  "minimatch": [
    "3.0.4",
    "5.1.0",
  ],
  "minipass": [
    "3.3.5",
  ],
  "minipass-collect": [
    "1.0.2",
  ],
  "minipass-fetch": [
    "2.1.0",
  ],
  "minipass-flush": [
    "1.0.5",
  ],
  "minipass-pipeline": [
    "1.2.4",
  ],
  "minipass-sized": [
    "1.0.3",
  ],
  "minizlib": [
    "2.1.2",
  ],
  "mkdirp": [
    "1.0.4",
  ],
  "ms": [
    "2.1.2",
    "2.1.3",
  ],
  "natural-compare": [
    "1.4.0",
  ],
  "negotiator": [
    "0.6.3",
  ],
  "node-gyp": [
    "9.1.0",
  ],
  "node-int64": [
    "0.4.0",
  ],
  "node-releases": [
    "2.0.6",
  ],
  "nopt": [
    "5.0.0",
  ],
  "normalize-path": [
    "3.0.0",
  ],
  "npm-run-path": [
    "4.0.1",
  ],
  "npmlog": [
    "6.0.2",
  ],
  "once": [
    "1.4.0",
  ],
  "onetime": [
    "5.1.2",
  ],
  "p-limit": [
    "2.3.0",
    "3.1.0",
  ],
  "p-locate": [
    "4.1.0",
  ],
  "p-map": [
    "4.0.0",
  ],
  "p-try": [
    "2.2.0",
  ],
  "parse-json": [
    "5.2.0",
  ],
  "path-exists": [
    "4.0.0",
  ],
  "path-is-absolute": [
    "1.0.1",
  ],
  "path-key": [
    "3.1.1",
  ],
  "path-parse": [
    "1.0.7",
  ],
  "picocolors": [
    "1.0.0",
  ],
  "picomatch": [
    "2.3.0",
  ],
  "pirates": [
    "4.0.5",
  ],
  "pkg-dir": [
    "4.2.0",
  ],
  "pretty-format": [
    "28.1.3",
  ],
  "promise-inflight": [
    "1.0.1",
  ],
  "promise-retry": [
    "2.0.1",
  ],
  "prompts": [
    "2.4.1",
  ],
  "react-is": [
    "18.2.0",
  ],
  "readable-stream": [
    "3.6.0",
  ],
  "require-directory": [
    "2.1.1",
  ],
  "resolve": [
    "1.20.0",
  ],
  "resolve-cwd": [
    "3.0.0",
  ],
  "resolve-from": [
    "5.0.0",
  ],
  "resolve.exports": [
    "1.1.0",
  ],
  "resolve>::version=1.20.0&hash=07638b": [
    "1.20.0",
  ],
  "retry": [
    "0.12.0",
  ],
  "rimraf": [
    "3.0.2",
  ],
  "safe-buffer": [
    "5.1.2",
    "5.2.1",
  ],
  "safer-buffer": [
    "2.1.2",
  ],
  "semver": [
    "6.3.0",
    "7.3.7",
  ],
  "set-blocking": [
    "2.0.0",
  ],
  "shebang-command": [
    "2.0.0",
  ],
  "shebang-regex": [
    "3.0.0",
  ],
  "signal-exit": [
    "3.0.7",
  ],
  "sisteransi": [
    "1.0.5",
  ],
  "slash": [
    "3.0.0",
  ],
  "smart-buffer": [
    "4.2.0",
  ],
  "socks": [
    "2.7.0",
  ],
  "socks-proxy-agent": [
    "7.0.0",
  ],
  "source-map": [
    "0.6.1",
  ],
  "source-map-support": [
    "0.5.13",
  ],
  "split-smartly2": [
    "workspace:.",
  ],
  "sprintf-js": [
    "1.0.3",
  ],
  "ssri": [
    "9.0.1",
  ],
  "stack-utils": [
    "2.0.3",
  ],
  "string-length": [
    "4.0.2",
  ],
  "string-width": [
    "4.2.3",
  ],
  "string_decoder": [
    "1.3.0",
  ],
  "strip-ansi": [
    "6.0.1",
  ],
  "strip-bom": [
    "4.0.0",
  ],
  "strip-final-newline": [
    "2.0.0",
  ],
  "strip-json-comments": [
    "3.1.1",
  ],
  "supports-color": [
    "5.5.0",
    "7.2.0",
    "8.1.1",
  ],
  "supports-hyperlinks": [
    "2.2.0",
  ],
  "tar": [
    "6.1.11",
  ],
  "terminal-link": [
    "2.1.1",
  ],
  "test-exclude": [
    "6.0.0",
  ],
  "tmpl": [
    "1.0.5",
  ],
  "to-fast-properties": [
    "2.0.0",
  ],
  "to-regex-range": [
    "5.0.1",
  ],
  "ts-type": [
    "2.1.10",
  ],
  "tslib": [
    "2.4.0",
  ],
  "type-detect": [
    "4.0.8",
  ],
  "type-fest": [
    "0.21.3",
  ],
  "typedarray-dts": [
    "1.0.0",
  ],
  "unique-filename": [
    "1.1.1",
  ],
  "unique-slug": [
    "2.0.2",
  ],
  "update-browserslist-db": [
    "1.0.5",
  ],
  "util-deprecate": [
    "1.0.2",
  ],
  "v8-to-istanbul": [
    "9.0.1",
  ],
  "walker": [
    "1.0.8",
  ],
  "which": [
    "2.0.2",
  ],
  "wide-align": [
    "1.1.5",
  ],
  "wrap-ansi": [
    "7.0.0",
  ],
  "wrappy": [
    "1.0.2",
  ],
  "write-file-atomic": [
    "4.0.1",
  ],
  "y18n": [
    "5.0.8",
  ],
  "yallist": [
    "4.0.0",
  ],
  "yargs": [
    "17.5.1",
  ],
  "yargs-parser": [
    "21.1.1",
  ],
  "yocto-queue": [
    "0.1.0",
  ],
}
`;

exports[`buildComputedPackage a/yarn.lock 1`] = `
{
  "@babel/code-frame": [
    "7.0.2",
  ],
  "@babel/generator": [
    "6.3.7",
    "7.3.5",
  ],
  "@babel/types": [
    "7.3.4",
  ],
}
`;

exports[`buildComputedPackage b/v1.iconv.lock 1`] = `
{
  "@babel/code-frame": [
    "7.12.13",
  ],
  "@babel/compat-data": [
    "7.14.4",
  ],
  "@babel/core": [
    "7.14.3",
  ],
  "@babel/generator": [
    "7.14.3",
  ],
  "@babel/helper-compilation-targets": [
    "7.14.4",
  ],
  "@babel/helper-function-name": [
    "7.14.2",
  ],
  "@babel/helper-get-function-arity": [
    "7.12.13",
  ],
  "@babel/helper-member-expression-to-functions": [
    "7.13.12",
  ],
  "@babel/helper-module-imports": [
    "7.13.12",
  ],
  "@babel/helper-module-transforms": [
    "7.14.2",
  ],
  "@babel/helper-optimise-call-expression": [
    "7.12.13",
  ],
  "@babel/helper-plugin-utils": [
    "7.13.0",
  ],
  "@babel/helper-replace-supers": [
    "7.14.4",
  ],
  "@babel/helper-simple-access": [
    "7.13.12",
  ],
  "@babel/helper-split-export-declaration": [
    "7.12.13",
  ],
  "@babel/helper-validator-identifier": [
    "7.14.0",
  ],
  "@babel/helper-validator-option": [
    "7.12.17",
  ],
  "@babel/helpers": [
    "7.14.0",
  ],
  "@babel/highlight": [
    "7.14.0",
  ],
  "@babel/parser": [
    "7.14.4",
  ],
  "@babel/plugin-syntax-async-generators": [
    "7.8.4",
  ],
  "@babel/plugin-syntax-bigint": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-class-properties": [
    "7.12.13",
  ],
  "@babel/plugin-syntax-import-meta": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-json-strings": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-logical-assignment-operators": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-nullish-coalescing-operator": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-numeric-separator": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-object-rest-spread": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-catch-binding": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-chaining": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-top-level-await": [
    "7.12.13",
  ],
  "@babel/plugin-syntax-typescript": [
    "7.12.13",
  ],
  "@babel/template": [
    "7.12.13",
  ],
  "@babel/traverse": [
    "7.14.2",
  ],
  "@babel/types": [
    "7.14.4",
  ],
  "@bcoe/v8-coverage": [
    "0.2.3",
  ],
  "@bluelovers/tsconfig": [
    "1.0.20",
  ],
  "@istanbuljs/load-nyc-config": [
    "1.1.0",
  ],
  "@istanbuljs/schema": [
    "0.1.3",
  ],
  "@jest/console": [
    "27.0.2",
  ],
  "@jest/core": [
    "27.0.4",
  ],
  "@jest/environment": [
    "27.0.3",
  ],
  "@jest/fake-timers": [
    "27.0.3",
  ],
  "@jest/globals": [
    "27.0.3",
  ],
  "@jest/reporters": [
    "27.0.4",
  ],
  "@jest/source-map": [
    "27.0.1",
  ],
  "@jest/test-result": [
    "27.0.2",
  ],
  "@jest/test-sequencer": [
    "27.0.4",
  ],
  "@jest/transform": [
    "27.0.2",
  ],
  "@jest/types": [
    "26.6.2",
    "27.0.2",
  ],
  "@sinonjs/commons": [
    "1.8.3",
  ],
  "@sinonjs/fake-timers": [
    "7.1.2",
  ],
  "@tootallnate/once": [
    "1.1.2",
  ],
  "@types/babel__core": [
    "7.1.14",
  ],
  "@types/babel__generator": [
    "7.6.2",
  ],
  "@types/babel__template": [
    "7.4.0",
  ],
  "@types/babel__traverse": [
    "7.11.1",
  ],
  "@types/bluebird": [
    "3.5.35",
  ],
  "@types/fs-extra": [
    "9.0.11",
  ],
  "@types/graceful-fs": [
    "4.1.5",
  ],
  "@types/html-encoding-sniffer": [
    "2.0.1",
  ],
  "@types/istanbul-lib-coverage": [
    "2.0.3",
  ],
  "@types/istanbul-lib-report": [
    "3.0.0",
  ],
  "@types/istanbul-reports": [
    "3.0.1",
  ],
  "@types/jest": [
    "26.0.23",
  ],
  "@types/lodash": [
    "4.14.170",
  ],
  "@types/luxon": [
    "1.26.5",
  ],
  "@types/mime-types": [
    "2.1.0",
  ],
  "@types/node": [
    "15.12.1",
  ],
  "@types/prettier": [
    "2.2.3",
  ],
  "@types/stack-utils": [
    "2.0.0",
  ],
  "@types/yargs": [
    "15.0.13",
    "16.0.3",
  ],
  "@types/yargs-parser": [
    "20.2.0",
  ],
  "abab": [
    "2.0.5",
  ],
  "acorn": [
    "7.4.1",
    "8.3.0",
  ],
  "acorn-globals": [
    "6.0.0",
  ],
  "acorn-walk": [
    "7.2.0",
  ],
  "agent-base": [
    "6.0.2",
  ],
  "ansi-escapes": [
    "4.3.2",
  ],
  "ansi-regex": [
    "5.0.0",
  ],
  "ansi-styles": [
    "3.2.1",
    "4.3.0",
    "5.2.0",
  ],
  "anymatch": [
    "3.1.2",
  ],
  "argparse": [
    "1.0.10",
  ],
  "asynckit": [
    "0.4.0",
  ],
  "babel-jest": [
    "27.0.2",
  ],
  "babel-plugin-istanbul": [
    "6.0.0",
  ],
  "babel-plugin-jest-hoist": [
    "27.0.1",
  ],
  "babel-preset-current-node-syntax": [
    "1.0.1",
  ],
  "babel-preset-jest": [
    "27.0.1",
  ],
  "balanced-match": [
    "1.0.2",
  ],
  "bluebird": [
    "3.7.2",
  ],
  "brace-expansion": [
    "1.1.11",
  ],
  "braces": [
    "3.0.2",
  ],
  "browser-process-hrtime": [
    "1.0.0",
  ],
  "browserslist": [
    "4.16.6",
  ],
  "bs-logger": [
    "0.2.6",
  ],
  "bser": [
    "2.1.1",
  ],
  "buffer-from": [
    "1.1.1",
  ],
  "callsites": [
    "3.1.0",
  ],
  "camelcase": [
    "5.3.1",
    "6.2.0",
  ],
  "caniuse-lite": [
    "1.0.30001234",
  ],
  "chalk": [
    "2.4.2",
    "4.1.1",
  ],
  "char-regex": [
    "1.0.2",
  ],
  "ci-info": [
    "3.2.0",
  ],
  "cjs-module-lexer": [
    "1.2.1",
  ],
  "cliui": [
    "7.0.4",
  ],
  "co": [
    "4.6.0",
  ],
  "collect-v8-coverage": [
    "1.0.1",
  ],
  "color-convert": [
    "1.9.3",
    "2.0.1",
  ],
  "color-name": [
    "1.1.3",
    "1.1.4",
  ],
  "colorette": [
    "1.2.2",
  ],
  "combined-stream": [
    "1.0.8",
  ],
  "concat-map": [
    "0.0.1",
  ],
  "convert-source-map": [
    "1.7.0",
  ],
  "cross-spawn": [
    "7.0.3",
  ],
  "cssom": [
    "0.3.8",
    "0.4.4",
  ],
  "cssstyle": [
    "2.3.0",
  ],
  "data-urls": [
    "2.0.0",
  ],
  "debug": [
    "4.3.1",
  ],
  "debug-color2": [
    "1.2.3",
  ],
  "decimal.js": [
    "10.2.1",
  ],
  "dedent": [
    "0.7.0",
  ],
  "deep-is": [
    "0.1.3",
  ],
  "deepmerge": [
    "4.2.2",
  ],
  "delayed-stream": [
    "1.0.0",
  ],
  "detect-newline": [
    "3.1.0",
  ],
  "diff-sequences": [
    "26.6.2",
    "27.0.1",
  ],
  "domexception": [
    "2.0.1",
  ],
  "electron-to-chromium": [
    "1.3.749",
  ],
  "emittery": [
    "0.8.1",
  ],
  "emoji-regex": [
    "8.0.0",
  ],
  "env-bool": [
    "1.0.3",
  ],
  "escalade": [
    "3.1.1",
  ],
  "escape-string-regexp": [
    "1.0.5",
    "2.0.0",
  ],
  "escodegen": [
    "2.0.0",
  ],
  "esprima": [
    "4.0.1",
  ],
  "estraverse": [
    "5.2.0",
  ],
  "esutils": [
    "2.0.3",
  ],
  "execa": [
    "5.1.1",
  ],
  "exit": [
    "0.1.2",
  ],
  "expect": [
    "27.0.2",
  ],
  "fast-json-stable-stringify": [
    "2.1.0",
  ],
  "fast-levenshtein": [
    "2.0.6",
  ],
  "fb-watchman": [
    "2.0.1",
  ],
  "fill-range": [
    "7.0.1",
  ],
  "find-up": [
    "4.1.0",
  ],
  "form-data": [
    "3.0.1",
  ],
  "fs-extra": [
    "10.0.0",
  ],
  "fs.realpath": [
    "1.0.0",
  ],
  "fsevents": [
    "2.3.2",
  ],
  "function-bind": [
    "1.1.1",
  ],
  "gensync": [
    "1.0.0-beta.2",
  ],
  "get-caller-file": [
    "2.0.5",
  ],
  "get-package-type": [
    "0.1.0",
  ],
  "get-stream": [
    "6.0.1",
  ],
  "glob": [
    "7.1.7",
  ],
  "globals": [
    "11.12.0",
  ],
  "graceful-fs": [
    "4.2.6",
  ],
  "has": [
    "1.0.3",
  ],
  "has-flag": [
    "3.0.0",
    "4.0.0",
  ],
  "html-encoding-sniffer": [
    "2.0.1",
  ],
  "html-escaper": [
    "2.0.2",
  ],
  "http-proxy-agent": [
    "4.0.1",
  ],
  "https-proxy-agent": [
    "5.0.0",
  ],
  "human-signals": [
    "2.1.0",
  ],
  "iconv-lite": [
    "0.4.24",
    "0.6.3",
  ],
  "import-local": [
    "3.0.2",
  ],
  "imurmurhash": [
    "0.1.4",
  ],
  "inflight": [
    "1.0.6",
  ],
  "inherits": [
    "2.0.4",
  ],
  "is-ci": [
    "3.0.0",
  ],
  "is-core-module": [
    "2.4.0",
  ],
  "is-fullwidth-code-point": [
    "3.0.0",
  ],
  "is-generator-fn": [
    "2.1.0",
  ],
  "is-number": [
    "7.0.0",
  ],
  "is-potential-custom-element-name": [
    "1.0.1",
  ],
  "is-stream": [
    "2.0.0",
  ],
  "is-typedarray": [
    "1.0.0",
  ],
  "isexe": [
    "2.0.0",
  ],
  "istanbul-lib-coverage": [
    "3.0.0",
  ],
  "istanbul-lib-instrument": [
    "4.0.3",
  ],
  "istanbul-lib-report": [
    "3.0.0",
  ],
  "istanbul-lib-source-maps": [
    "4.0.0",
  ],
  "istanbul-reports": [
    "3.0.2",
  ],
  "jest": [
    "27.0.4",
  ],
  "jest-changed-files": [
    "27.0.2",
  ],
  "jest-circus": [
    "27.0.4",
  ],
  "jest-cli": [
    "27.0.4",
  ],
  "jest-config": [
    "27.0.4",
  ],
  "jest-diff": [
    "26.6.2",
    "27.0.2",
  ],
  "jest-docblock": [
    "27.0.1",
  ],
  "jest-each": [
    "27.0.2",
  ],
  "jest-environment-jsdom": [
    "27.0.3",
  ],
  "jest-environment-node": [
    "27.0.3",
  ],
  "jest-get-type": [
    "26.3.0",
    "27.0.1",
  ],
  "jest-haste-map": [
    "27.0.2",
  ],
  "jest-jasmine2": [
    "27.0.4",
  ],
  "jest-leak-detector": [
    "27.0.2",
  ],
  "jest-matcher-utils": [
    "27.0.2",
  ],
  "jest-message-util": [
    "27.0.2",
  ],
  "jest-mock": [
    "27.0.3",
  ],
  "jest-pnp-resolver": [
    "1.2.2",
  ],
  "jest-regex-util": [
    "27.0.1",
  ],
  "jest-resolve": [
    "27.0.4",
  ],
  "jest-resolve-dependencies": [
    "27.0.4",
  ],
  "jest-runner": [
    "27.0.4",
  ],
  "jest-runtime": [
    "27.0.4",
  ],
  "jest-serializer": [
    "27.0.1",
  ],
  "jest-snapshot": [
    "27.0.4",
  ],
  "jest-util": [
    "27.0.2",
  ],
  "jest-validate": [
    "27.0.2",
  ],
  "jest-watcher": [
    "27.0.2",
  ],
  "jest-worker": [
    "27.0.2",
  ],
  "js-tokens": [
    "4.0.0",
  ],
  "js-yaml": [
    "3.14.1",
  ],
  "jschardet": [
    "3.0.0",
  ],
  "jsdom": [
    "16.6.0",
  ],
  "jsesc": [
    "2.5.2",
  ],
  "json5": [
    "2.2.0",
  ],
  "jsonfile": [
    "6.1.0",
  ],
  "kleur": [
    "3.0.3",
  ],
  "leven": [
    "3.1.0",
  ],
  "levn": [
    "0.3.0",
  ],
  "locate-path": [
    "5.0.0",
  ],
  "lodash": [
    "4.17.21",
  ],
  "lru-cache": [
    "6.0.0",
  ],
  "luxon": [
    "1.27.0",
  ],
  "make-dir": [
    "3.1.0",
  ],
  "make-error": [
    "1.3.6",
  ],
  "makeerror": [
    "1.0.11",
  ],
  "merge-stream": [
    "2.0.0",
  ],
  "micromatch": [
    "4.0.4",
  ],
  "mime-db": [
    "1.48.0",
  ],
  "mime-types": [
    "2.1.31",
  ],
  "mimic-fn": [
    "2.1.0",
  ],
  "minimatch": [
    "3.0.4",
  ],
  "minimist": [
    "1.2.5",
  ],
  "mkdirp": [
    "1.0.4",
  ],
  "ms": [
    "2.1.2",
  ],
  "natural-compare": [
    "1.4.0",
  ],
  "node-int64": [
    "0.4.0",
  ],
  "node-modules-regexp": [
    "1.0.0",
  ],
  "node-releases": [
    "1.1.72",
  ],
  "normalize-path": [
    "3.0.0",
  ],
  "npm-run-path": [
    "4.0.1",
  ],
  "nwsapi": [
    "2.2.0",
  ],
  "once": [
    "1.4.0",
  ],
  "onetime": [
    "5.1.2",
  ],
  "optionator": [
    "0.8.3",
  ],
  "p-each-series": [
    "2.2.0",
  ],
  "p-limit": [
    "2.3.0",
  ],
  "p-locate": [
    "4.1.0",
  ],
  "p-try": [
    "2.2.0",
  ],
  "parse5": [
    "6.0.1",
  ],
  "path-exists": [
    "4.0.0",
  ],
  "path-is-absolute": [
    "1.0.1",
  ],
  "path-key": [
    "3.1.1",
  ],
  "path-parse": [
    "1.0.7",
  ],
  "picomatch": [
    "2.3.0",
  ],
  "pirates": [
    "4.0.1",
  ],
  "pkg-dir": [
    "4.2.0",
  ],
  "prelude-ls": [
    "1.1.2",
  ],
  "pretty-format": [
    "26.6.2",
    "27.0.2",
  ],
  "prompts": [
    "2.4.1",
  ],
  "psl": [
    "1.8.0",
  ],
  "punycode": [
    "2.1.1",
  ],
  "react-is": [
    "17.0.2",
  ],
  "require-directory": [
    "2.1.1",
  ],
  "resolve": [
    "1.20.0",
  ],
  "resolve-cwd": [
    "3.0.0",
  ],
  "resolve-from": [
    "5.0.0",
  ],
  "rimraf": [
    "3.0.2",
  ],
  "safe-buffer": [
    "5.1.2",
  ],
  "safer-buffer": [
    "2.1.2",
  ],
  "sanitize-filename": [
    "1.6.3",
  ],
  "saxes": [
    "5.0.1",
  ],
  "semver": [
    "6.3.0",
    "7.3.5",
  ],
  "shebang-command": [
    "2.0.0",
  ],
  "shebang-regex": [
    "3.0.0",
  ],
  "signal-exit": [
    "3.0.3",
  ],
  "sisteransi": [
    "1.0.5",
  ],
  "slash": [
    "3.0.0",
  ],
  "source-map": [
    "0.5.7",
    "0.6.1",
    "0.7.3",
  ],
  "source-map-support": [
    "0.5.19",
  ],
  "sprintf-js": [
    "1.0.3",
  ],
  "stack-utils": [
    "2.0.3",
  ],
  "stat-mode": [
    "1.0.0",
  ],
  "string-length": [
    "4.0.2",
  ],
  "string-width": [
    "4.2.2",
  ],
  "strip-ansi": [
    "6.0.0",
  ],
  "strip-bom": [
    "4.0.0",
  ],
  "strip-final-newline": [
    "2.0.0",
  ],
  "supports-color": [
    "5.5.0",
    "7.2.0",
    "8.1.1",
  ],
  "supports-hyperlinks": [
    "2.2.0",
  ],
  "symbol-tree": [
    "3.2.4",
  ],
  "terminal-link": [
    "2.1.1",
  ],
  "test-exclude": [
    "6.0.0",
  ],
  "throat": [
    "6.0.1",
  ],
  "tmpl": [
    "1.0.4",
  ],
  "to-fast-properties": [
    "2.0.0",
  ],
  "to-regex-range": [
    "5.0.1",
  ],
  "tough-cookie": [
    "4.0.0",
  ],
  "tr46": [
    "2.1.0",
  ],
  "truncate-utf8-bytes": [
    "1.0.2",
  ],
  "ts-jest": [
    "27.0.2",
  ],
  "ts-type": [
    "1.2.34",
  ],
  "type-check": [
    "0.3.2",
  ],
  "type-detect": [
    "4.0.8",
  ],
  "type-fest": [
    "0.21.3",
  ],
  "typedarray-dts": [
    "1.0.0",
  ],
  "typedarray-to-buffer": [
    "3.1.5",
  ],
  "universalify": [
    "0.1.2",
    "2.0.0",
  ],
  "upath": [
    "2.0.1",
  ],
  "utf8-byte-length": [
    "1.0.4",
  ],
  "v8-to-istanbul": [
    "7.1.2",
  ],
  "w3c-hr-time": [
    "1.0.2",
  ],
  "w3c-xmlserializer": [
    "2.0.0",
  ],
  "walker": [
    "1.0.7",
  ],
  "webidl-conversions": [
    "5.0.0",
    "6.1.0",
  ],
  "whatwg-encoding": [
    "1.0.5",
  ],
  "whatwg-mimetype": [
    "2.3.0",
  ],
  "whatwg-url": [
    "8.5.0",
  ],
  "which": [
    "2.0.2",
  ],
  "word-wrap": [
    "1.2.3",
  ],
  "wrap-ansi": [
    "7.0.0",
  ],
  "wrappy": [
    "1.0.2",
  ],
  "write-file-atomic": [
    "3.0.3",
  ],
  "ws": [
    "7.4.6",
  ],
  "xml-name-validator": [
    "3.0.0",
  ],
  "xmlchars": [
    "2.2.0",
  ],
  "y18n": [
    "5.0.8",
  ],
  "yallist": [
    "4.0.0",
  ],
  "yargs": [
    "16.2.0",
  ],
  "yargs-parser": [
    "20.2.7",
  ],
}
`;

exports[`buildComputedPackage b/v2.lock 1`] = `
{
  "@bluelovers/tsconfig": [
    "1.0.20",
  ],
  "@types/color-name": [
    "1.1.1",
  ],
  "@types/node": [
    "14.0.27",
  ],
  "ansi-colors": [
    "3.2.4",
  ],
  "ansi-regex": [
    "2.1.1",
    "3.0.0",
  ],
  "ansi-styles": [
    "4.2.1",
  ],
  "camelcase": [
    "5.3.1",
  ],
  "chalk": [
    "4.1.0",
  ],
  "cliui": [
    "4.1.0",
  ],
  "code-point-at": [
    "1.1.0",
  ],
  "color-convert": [
    "2.0.1",
  ],
  "color-name": [
    "1.1.4",
  ],
  "cross-spawn": [
    "6.0.5",
  ],
  "decamelize": [
    "1.2.0",
  ],
  "end-of-stream": [
    "1.4.4",
  ],
  "execa": [
    "1.0.0",
  ],
  "find-up": [
    "3.0.0",
  ],
  "fmake": [
    "0.1.3",
  ],
  "get-caller-file": [
    "1.0.3",
  ],
  "get-stream": [
    "4.1.0",
  ],
  "has-flag": [
    "4.0.0",
  ],
  "invert-kv": [
    "2.0.0",
  ],
  "is-fullwidth-code-point": [
    "1.0.0",
    "2.0.0",
  ],
  "is-stream": [
    "1.1.0",
  ],
  "isexe": [
    "2.0.0",
  ],
  "lcid": [
    "2.0.0",
  ],
  "locate-path": [
    "3.0.0",
  ],
  "map-age-cleaner": [
    "0.1.3",
  ],
  "mem": [
    "4.3.0",
  ],
  "mimic-fn": [
    "2.1.0",
  ],
  "nice-try": [
    "1.0.5",
  ],
  "npm-run-path": [
    "2.0.2",
  ],
  "number-is-nan": [
    "1.0.1",
  ],
  "once": [
    "1.4.0",
  ],
  "os-locale": [
    "3.1.0",
  ],
  "p-defer": [
    "1.0.0",
  ],
  "p-finally": [
    "1.0.0",
  ],
  "p-is-promise": [
    "2.1.0",
  ],
  "p-limit": [
    "2.3.0",
  ],
  "p-locate": [
    "3.0.0",
  ],
  "p-try": [
    "2.2.0",
  ],
  "path-exists": [
    "3.0.0",
  ],
  "path-key": [
    "2.0.1",
  ],
  "pump": [
    "3.0.0",
  ],
  "require-directory": [
    "2.1.1",
  ],
  "require-main-filename": [
    "1.0.1",
  ],
  "semver": [
    "5.7.1",
  ],
  "set-blocking": [
    "2.0.0",
  ],
  "shebang-command": [
    "1.2.0",
  ],
  "shebang-regex": [
    "1.0.0",
  ],
  "signal-exit": [
    "3.0.3",
  ],
  "string-width": [
    "1.0.2",
    "2.1.1",
  ],
  "strip-ansi": [
    "3.0.1",
    "4.0.0",
  ],
  "strip-eof": [
    "1.0.0",
  ],
  "supports-color": [
    "7.1.0",
  ],
  "which": [
    "1.3.1",
  ],
  "which-module": [
    "2.0.0",
  ],
  "wrap-ansi": [
    "2.1.0",
  ],
  "wrappy": [
    "1.0.2",
  ],
  "ws-yarn-v2-test": [
    "workspace:.",
  ],
  "y18n": [
    "4.0.0",
  ],
  "yargs": [
    "12.0.5",
  ],
  "yargs-parser": [
    "11.1.1",
  ],
  "yarn": [
    "2.0.0-rc.27",
  ],
}
`;

exports[`buildComputedPackage b/v3/yarn.lock 1`] = `
{
  "@ampproject/remapping": [
    "2.2.0",
  ],
  "@babel/code-frame": [
    "7.18.6",
  ],
  "@babel/compat-data": [
    "7.18.8",
  ],
  "@babel/core": [
    "7.18.10",
  ],
  "@babel/generator": [
    "7.18.12",
  ],
  "@babel/helper-compilation-targets": [
    "7.18.9",
  ],
  "@babel/helper-environment-visitor": [
    "7.18.9",
  ],
  "@babel/helper-function-name": [
    "7.18.9",
  ],
  "@babel/helper-hoist-variables": [
    "7.18.6",
  ],
  "@babel/helper-module-imports": [
    "7.18.6",
  ],
  "@babel/helper-module-transforms": [
    "7.18.9",
  ],
  "@babel/helper-plugin-utils": [
    "7.14.5",
  ],
  "@babel/helper-simple-access": [
    "7.18.6",
  ],
  "@babel/helper-split-export-declaration": [
    "7.18.6",
  ],
  "@babel/helper-string-parser": [
    "7.18.10",
  ],
  "@babel/helper-validator-identifier": [
    "7.18.6",
  ],
  "@babel/helper-validator-option": [
    "7.18.6",
  ],
  "@babel/helpers": [
    "7.18.9",
  ],
  "@babel/highlight": [
    "7.18.6",
  ],
  "@babel/parser": [
    "7.18.11",
  ],
  "@babel/plugin-syntax-async-generators": [
    "7.8.4",
  ],
  "@babel/plugin-syntax-bigint": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-class-properties": [
    "7.12.13",
  ],
  "@babel/plugin-syntax-import-meta": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-json-strings": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-logical-assignment-operators": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-nullish-coalescing-operator": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-numeric-separator": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-object-rest-spread": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-catch-binding": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-chaining": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-top-level-await": [
    "7.14.5",
  ],
  "@babel/plugin-syntax-typescript": [
    "7.14.5",
  ],
  "@babel/template": [
    "7.18.10",
  ],
  "@babel/traverse": [
    "7.18.11",
  ],
  "@babel/types": [
    "7.18.10",
  ],
  "@bcoe/v8-coverage": [
    "0.2.3",
  ],
  "@bluelovers/tsconfig": [
    "1.0.30",
  ],
  "@gar/promisify": [
    "1.1.3",
  ],
  "@istanbuljs/load-nyc-config": [
    "1.1.0",
  ],
  "@istanbuljs/schema": [
    "0.1.3",
  ],
  "@jest/console": [
    "28.1.3",
  ],
  "@jest/core": [
    "28.1.3",
  ],
  "@jest/environment": [
    "28.1.3",
  ],
  "@jest/expect": [
    "28.1.3",
  ],
  "@jest/expect-utils": [
    "28.1.3",
  ],
  "@jest/fake-timers": [
    "28.1.3",
  ],
  "@jest/globals": [
    "28.1.3",
  ],
  "@jest/reporters": [
    "28.1.3",
  ],
  "@jest/schemas": [
    "28.1.3",
  ],
  "@jest/source-map": [
    "28.1.2",
  ],
  "@jest/test-result": [
    "28.1.3",
  ],
  "@jest/test-sequencer": [
    "28.1.3",
  ],
  "@jest/transform": [
    "28.1.3",
  ],
  "@jest/types": [
    "28.1.3",
  ],
  "@jridgewell/gen-mapping": [
    "0.1.1",
    "0.3.2",
  ],
  "@jridgewell/resolve-uri": [
    "3.1.0",
  ],
  "@jridgewell/set-array": [
    "1.1.2",
  ],
  "@jridgewell/sourcemap-codec": [
    "1.4.14",
  ],
  "@jridgewell/trace-mapping": [
    "0.3.14",
  ],
  "@npmcli/fs": [
    "2.1.1",
  ],
  "@npmcli/move-file": [
    "2.0.0",
  ],
  "@sinclair/typebox": [
    "0.24.27",
  ],
  "@sinonjs/commons": [
    "1.8.3",
  ],
  "@sinonjs/fake-timers": [
    "9.1.2",
  ],
  "@tootallnate/once": [
    "2.0.0",
  ],
  "@types/babel__core": [
    "7.1.14",
  ],
  "@types/babel__generator": [
    "7.6.2",
  ],
  "@types/babel__template": [
    "7.4.0",
  ],
  "@types/babel__traverse": [
    "7.14.0",
  ],
  "@types/graceful-fs": [
    "4.1.5",
  ],
  "@types/istanbul-lib-coverage": [
    "2.0.3",
  ],
  "@types/istanbul-lib-report": [
    "3.0.0",
  ],
  "@types/istanbul-reports": [
    "3.0.1",
  ],
  "@types/jest": [
    "28.1.6",
  ],
  "@types/node": [
    "15.12.5",
  ],
  "@types/prettier": [
    "2.3.0",
  ],
  "@types/stack-utils": [
    "2.0.0",
  ],
  "@types/yargs": [
    "17.0.11",
  ],
  "@types/yargs-parser": [
    "20.2.0",
  ],
  "abbrev": [
    "1.1.1",
  ],
  "agent-base": [
    "6.0.2",
  ],
  "agentkeepalive": [
    "4.2.1",
  ],
  "aggregate-error": [
    "3.1.0",
  ],
  "ansi-escapes": [
    "4.3.2",
  ],
  "ansi-regex": [
    "5.0.1",
  ],
  "ansi-styles": [
    "3.2.1",
    "4.3.0",
    "5.2.0",
  ],
  "anymatch": [
    "3.1.2",
  ],
  "aproba": [
    "2.0.0",
  ],
  "are-we-there-yet": [
    "3.0.1",
  ],
  "argparse": [
    "1.0.10",
  ],
  "babel-jest": [
    "28.1.3",
  ],
  "babel-plugin-istanbul": [
    "6.1.1",
  ],
  "babel-plugin-jest-hoist": [
    "28.1.3",
  ],
  "babel-preset-current-node-syntax": [
    "1.0.1",
  ],
  "babel-preset-jest": [
    "28.1.3",
  ],
  "balanced-match": [
    "1.0.2",
  ],
  "brace-expansion": [
    "1.1.11",
    "2.0.1",
  ],
  "braces": [
    "3.0.2",
  ],
  "browserslist": [
    "4.21.3",
  ],
  "bser": [
    "2.1.1",
  ],
  "buffer-from": [
    "1.1.1",
  ],
  "cacache": [
    "16.1.1",
  ],
  "callsites": [
    "3.1.0",
  ],
  "camelcase": [
    "5.3.1",
    "6.2.0",
  ],
  "caniuse-lite": [
    "1.0.30001375",
  ],
  "chalk": [
    "2.4.2",
    "4.1.1",
  ],
  "char-regex": [
    "1.0.2",
  ],
  "chownr": [
    "2.0.0",
  ],
  "ci-info": [
    "3.3.2",
  ],
  "cjs-module-lexer": [
    "1.2.1",
  ],
  "clean-stack": [
    "2.2.0",
  ],
  "cliui": [
    "7.0.4",
  ],
  "co": [
    "4.6.0",
  ],
  "collect-v8-coverage": [
    "1.0.1",
  ],
  "color-convert": [
    "1.9.3",
    "2.0.1",
  ],
  "color-name": [
    "1.1.3",
    "1.1.4",
  ],
  "color-support": [
    "1.1.3",
  ],
  "concat-map": [
    "0.0.1",
  ],
  "console-control-strings": [
    "1.1.0",
  ],
  "convert-source-map": [
    "1.8.0",
  ],
  "cross-spawn": [
    "7.0.3",
  ],
  "debug": [
    "4.3.1",
    "4.3.4",
  ],
  "dedent": [
    "0.7.0",
  ],
  "deepmerge": [
    "4.2.2",
  ],
  "delegates": [
    "1.0.0",
  ],
  "depd": [
    "1.1.2",
  ],
  "detect-newline": [
    "3.1.0",
  ],
  "diff-sequences": [
    "28.1.1",
  ],
  "electron-to-chromium": [
    "1.4.214",
  ],
  "emittery": [
    "0.10.2",
  ],
  "emoji-regex": [
    "8.0.0",
  ],
  "encoding": [
    "0.1.13",
  ],
  "env-paths": [
    "2.2.1",
  ],
  "err-code": [
    "2.0.3",
  ],
  "error-ex": [
    "1.3.2",
  ],
  "escalade": [
    "3.1.1",
  ],
  "escape-string-regexp": [
    "1.0.5",
    "2.0.0",
  ],
  "esprima": [
    "4.0.1",
  ],
  "execa": [
    "5.1.1",
  ],
  "exit": [
    "0.1.2",
  ],
  "expect": [
    "28.1.3",
  ],
  "fast-json-stable-stringify": [
    "2.1.0",
  ],
  "fb-watchman": [
    "2.0.1",
  ],
  "fill-range": [
    "7.0.1",
  ],
  "find-up": [
    "4.1.0",
  ],
  "fs-minipass": [
    "2.1.0",
  ],
  "fs.realpath": [
    "1.0.0",
  ],
  "fsevents": [
    "2.3.2",
  ],
  "fsevents>::version=2.3.2&hash=18f3a7": [
    "2.3.2",
  ],
  "function-bind": [
    "1.1.1",
  ],
  "gauge": [
    "4.0.4",
  ],
  "gensync": [
    "1.0.0-beta.2",
  ],
  "get-caller-file": [
    "2.0.5",
  ],
  "get-package-type": [
    "0.1.0",
  ],
  "get-stream": [
    "6.0.1",
  ],
  "glob": [
    "7.1.7",
    "8.0.3",
  ],
  "globals": [
    "11.12.0",
  ],
  "graceful-fs": [
    "4.2.10",
  ],
  "has": [
    "1.0.3",
  ],
  "has-flag": [
    "3.0.0",
    "4.0.0",
  ],
  "has-unicode": [
    "2.0.1",
  ],
  "html-escaper": [
    "2.0.2",
  ],
  "http-cache-semantics": [
    "4.1.0",
  ],
  "http-proxy-agent": [
    "5.0.0",
  ],
  "https-proxy-agent": [
    "5.0.1",
  ],
  "human-signals": [
    "2.1.0",
  ],
  "humanize-ms": [
    "1.2.1",
  ],
  "iconv-lite": [
    "0.6.3",
  ],
  "import-local": [
    "3.0.2",
  ],
  "imurmurhash": [
    "0.1.4",
  ],
  "indent-string": [
    "4.0.0",
  ],
  "infer-owner": [
    "1.0.4",
  ],
  "inflight": [
    "1.0.6",
  ],
  "inherits": [
    "2.0.4",
  ],
  "ip": [
    "2.0.0",
  ],
  "is-arrayish": [
    "0.2.1",
  ],
  "is-core-module": [
    "2.4.0",
  ],
  "is-fullwidth-code-point": [
    "3.0.0",
  ],
  "is-generator-fn": [
    "2.1.0",
  ],
  "is-lambda": [
    "1.0.1",
  ],
  "is-number": [
    "7.0.0",
  ],
  "is-stream": [
    "2.0.0",
  ],
  "isexe": [
    "2.0.0",
  ],
  "istanbul-lib-coverage": [
    "3.2.0",
  ],
  "istanbul-lib-instrument": [
    "5.2.0",
  ],
  "istanbul-lib-report": [
    "3.0.0",
  ],
  "istanbul-lib-source-maps": [
    "4.0.0",
  ],
  "istanbul-reports": [
    "3.1.5",
  ],
  "jest": [
    "28.1.3",
  ],
  "jest-changed-files": [
    "28.1.3",
  ],
  "jest-circus": [
    "28.1.3",
  ],
  "jest-cli": [
    "28.1.3",
  ],
  "jest-config": [
    "28.1.3",
  ],
  "jest-diff": [
    "28.1.3",
  ],
  "jest-docblock": [
    "28.1.1",
  ],
  "jest-each": [
    "28.1.3",
  ],
  "jest-environment-node": [
    "28.1.3",
  ],
  "jest-get-type": [
    "28.0.2",
  ],
  "jest-haste-map": [
    "28.1.3",
  ],
  "jest-leak-detector": [
    "28.1.3",
  ],
  "jest-matcher-utils": [
    "28.1.3",
  ],
  "jest-message-util": [
    "28.1.3",
  ],
  "jest-mock": [
    "28.1.3",
  ],
  "jest-pnp-resolver": [
    "1.2.2",
  ],
  "jest-regex-util": [
    "28.0.2",
  ],
  "jest-resolve": [
    "28.1.3",
  ],
  "jest-resolve-dependencies": [
    "28.1.3",
  ],
  "jest-runner": [
    "28.1.3",
  ],
  "jest-runtime": [
    "28.1.3",
  ],
  "jest-snapshot": [
    "28.1.3",
  ],
  "jest-util": [
    "28.1.3",
  ],
  "jest-validate": [
    "28.1.3",
  ],
  "jest-watcher": [
    "28.1.3",
  ],
  "jest-worker": [
    "28.1.3",
  ],
  "js-tokens": [
    "4.0.0",
  ],
  "js-yaml": [
    "3.14.1",
  ],
  "jsesc": [
    "2.5.2",
  ],
  "json-parse-even-better-errors": [
    "2.3.1",
  ],
  "json5": [
    "2.2.1",
  ],
  "kleur": [
    "3.0.3",
  ],
  "leven": [
    "3.1.0",
  ],
  "lines-and-columns": [
    "1.2.4",
  ],
  "locate-path": [
    "5.0.0",
  ],
  "lru-cache": [
    "6.0.0",
    "7.13.2",
  ],
  "make-dir": [
    "3.1.0",
  ],
  "make-fetch-happen": [
    "10.2.0",
  ],
  "makeerror": [
    "1.0.12",
  ],
  "merge-stream": [
    "2.0.0",
  ],
  "micromatch": [
    "4.0.4",
  ],
  "mimic-fn": [
    "2.1.0",
  ],
  "minimatch": [
    "3.0.4",
    "5.1.0",
  ],
  "minipass": [
    "3.3.5",
  ],
  "minipass-collect": [
    "1.0.2",
  ],
  "minipass-fetch": [
    "2.1.0",
  ],
  "minipass-flush": [
    "1.0.5",
  ],
  "minipass-pipeline": [
    "1.2.4",
  ],
  "minipass-sized": [
    "1.0.3",
  ],
  "minizlib": [
    "2.1.2",
  ],
  "mkdirp": [
    "1.0.4",
  ],
  "ms": [
    "2.1.2",
    "2.1.3",
  ],
  "natural-compare": [
    "1.4.0",
  ],
  "negotiator": [
    "0.6.3",
  ],
  "node-gyp": [
    "9.1.0",
  ],
  "node-int64": [
    "0.4.0",
  ],
  "node-releases": [
    "2.0.6",
  ],
  "nopt": [
    "5.0.0",
  ],
  "normalize-path": [
    "3.0.0",
  ],
  "npm-run-path": [
    "4.0.1",
  ],
  "npmlog": [
    "6.0.2",
  ],
  "once": [
    "1.4.0",
  ],
  "onetime": [
    "5.1.2",
  ],
  "p-limit": [
    "2.3.0",
    "3.1.0",
  ],
  "p-locate": [
    "4.1.0",
  ],
  "p-map": [
    "4.0.0",
  ],
  "p-try": [
    "2.2.0",
  ],
  "parse-json": [
    "5.2.0",
  ],
  "path-exists": [
    "4.0.0",
  ],
  "path-is-absolute": [
    "1.0.1",
  ],
  "path-key": [
    "3.1.1",
  ],
  "path-parse": [
    "1.0.7",
  ],
  "picocolors": [
    "1.0.0",
  ],
  "picomatch": [
    "2.3.0",
  ],
  "pirates": [
    "4.0.5",
  ],
  "pkg-dir": [
    "4.2.0",
  ],
  "pretty-format": [
    "28.1.3",
  ],
  "promise-inflight": [
    "1.0.1",
  ],
  "promise-retry": [
    "2.0.1",
  ],
  "prompts": [
    "2.4.1",
  ],
  "react-is": [
    "18.2.0",
  ],
  "readable-stream": [
    "3.6.0",
  ],
  "require-directory": [
    "2.1.1",
  ],
  "resolve": [
    "1.20.0",
  ],
  "resolve-cwd": [
    "3.0.0",
  ],
  "resolve-from": [
    "5.0.0",
  ],
  "resolve.exports": [
    "1.1.0",
  ],
  "resolve>::version=1.20.0&hash=07638b": [
    "1.20.0",
  ],
  "retry": [
    "0.12.0",
  ],
  "rimraf": [
    "3.0.2",
  ],
  "safe-buffer": [
    "5.1.2",
    "5.2.1",
  ],
  "safer-buffer": [
    "2.1.2",
  ],
  "semver": [
    "6.3.0",
    "7.3.7",
  ],
  "set-blocking": [
    "2.0.0",
  ],
  "shebang-command": [
    "2.0.0",
  ],
  "shebang-regex": [
    "3.0.0",
  ],
  "signal-exit": [
    "3.0.7",
  ],
  "sisteransi": [
    "1.0.5",
  ],
  "slash": [
    "3.0.0",
  ],
  "smart-buffer": [
    "4.2.0",
  ],
  "socks": [
    "2.7.0",
  ],
  "socks-proxy-agent": [
    "7.0.0",
  ],
  "source-map": [
    "0.6.1",
  ],
  "source-map-support": [
    "0.5.13",
  ],
  "split-smartly2": [
    "workspace:.",
  ],
  "sprintf-js": [
    "1.0.3",
  ],
  "ssri": [
    "9.0.1",
  ],
  "stack-utils": [
    "2.0.3",
  ],
  "string-length": [
    "4.0.2",
  ],
  "string-width": [
    "4.2.3",
  ],
  "string_decoder": [
    "1.3.0",
  ],
  "strip-ansi": [
    "6.0.1",
  ],
  "strip-bom": [
    "4.0.0",
  ],
  "strip-final-newline": [
    "2.0.0",
  ],
  "strip-json-comments": [
    "3.1.1",
  ],
  "supports-color": [
    "5.5.0",
    "7.2.0",
    "8.1.1",
  ],
  "supports-hyperlinks": [
    "2.2.0",
  ],
  "tar": [
    "6.1.11",
  ],
  "terminal-link": [
    "2.1.1",
  ],
  "test-exclude": [
    "6.0.0",
  ],
  "tmpl": [
    "1.0.5",
  ],
  "to-fast-properties": [
    "2.0.0",
  ],
  "to-regex-range": [
    "5.0.1",
  ],
  "ts-type": [
    "2.1.10",
  ],
  "tslib": [
    "2.4.0",
  ],
  "type-detect": [
    "4.0.8",
  ],
  "type-fest": [
    "0.21.3",
  ],
  "typedarray-dts": [
    "1.0.0",
  ],
  "unique-filename": [
    "1.1.1",
  ],
  "unique-slug": [
    "2.0.2",
  ],
  "update-browserslist-db": [
    "1.0.5",
  ],
  "util-deprecate": [
    "1.0.2",
  ],
  "v8-to-istanbul": [
    "9.0.1",
  ],
  "walker": [
    "1.0.8",
  ],
  "which": [
    "2.0.2",
  ],
  "wide-align": [
    "1.1.5",
  ],
  "wrap-ansi": [
    "7.0.0",
  ],
  "wrappy": [
    "1.0.2",
  ],
  "write-file-atomic": [
    "4.0.1",
  ],
  "y18n": [
    "5.0.8",
  ],
  "yallist": [
    "4.0.0",
  ],
  "yargs": [
    "17.5.1",
  ],
  "yargs-parser": [
    "21.1.1",
  ],
  "yocto-queue": [
    "0.1.0",
  ],
}
`;

exports[`buildComputedPackage b/v3/yarn-2.lock 1`] = `
{
  "@ampproject/remapping": [
    "2.2.0",
  ],
  "@babel/code-frame": [
    "7.18.6",
  ],
  "@babel/compat-data": [
    "7.18.8",
  ],
  "@babel/core": [
    "7.18.10",
  ],
  "@babel/generator": [
    "7.18.12",
  ],
  "@babel/helper-compilation-targets": [
    "7.18.9",
  ],
  "@babel/helper-environment-visitor": [
    "7.18.9",
  ],
  "@babel/helper-function-name": [
    "7.18.9",
  ],
  "@babel/helper-hoist-variables": [
    "7.18.6",
  ],
  "@babel/helper-module-imports": [
    "7.18.6",
  ],
  "@babel/helper-module-transforms": [
    "7.18.9",
  ],
  "@babel/helper-plugin-utils": [
    "7.18.9",
  ],
  "@babel/helper-simple-access": [
    "7.18.6",
  ],
  "@babel/helper-split-export-declaration": [
    "7.18.6",
  ],
  "@babel/helper-string-parser": [
    "7.18.10",
  ],
  "@babel/helper-validator-identifier": [
    "7.18.6",
  ],
  "@babel/helper-validator-option": [
    "7.18.6",
  ],
  "@babel/helpers": [
    "7.18.9",
  ],
  "@babel/highlight": [
    "7.18.6",
  ],
  "@babel/parser": [
    "7.18.11",
  ],
  "@babel/plugin-syntax-async-generators": [
    "7.8.4",
  ],
  "@babel/plugin-syntax-bigint": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-class-properties": [
    "7.12.13",
  ],
  "@babel/plugin-syntax-import-meta": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-json-strings": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-logical-assignment-operators": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-nullish-coalescing-operator": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-numeric-separator": [
    "7.10.4",
  ],
  "@babel/plugin-syntax-object-rest-spread": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-catch-binding": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-optional-chaining": [
    "7.8.3",
  ],
  "@babel/plugin-syntax-top-level-await": [
    "7.14.5",
  ],
  "@babel/plugin-syntax-typescript": [
    "7.18.6",
  ],
  "@babel/template": [
    "7.18.10",
  ],
  "@babel/traverse": [
    "7.18.11",
  ],
  "@babel/types": [
    "7.18.10",
  ],
  "@bcoe/v8-coverage": [
    "0.2.3",
  ],
  "@bluelovers/tsconfig": [
    "1.0.30",
  ],
  "@gar/promisify": [
    "1.1.3",
  ],
  "@istanbuljs/load-nyc-config": [
    "1.1.0",
  ],
  "@istanbuljs/schema": [
    "0.1.3",
  ],
  "@jest/console": [
    "28.1.3",
  ],
  "@jest/core": [
    "28.1.3",
  ],
  "@jest/environment": [
    "28.1.3",
  ],
  "@jest/expect": [
    "28.1.3",
  ],
  "@jest/expect-utils": [
    "28.1.3",
  ],
  "@jest/fake-timers": [
    "28.1.3",
  ],
  "@jest/globals": [
    "28.1.3",
  ],
  "@jest/reporters": [
    "28.1.3",
  ],
  "@jest/schemas": [
    "28.1.3",
  ],
  "@jest/source-map": [
    "28.1.2",
  ],
  "@jest/test-result": [
    "28.1.3",
  ],
  "@jest/test-sequencer": [
    "28.1.3",
  ],
  "@jest/transform": [
    "28.1.3",
  ],
  "@jest/types": [
    "28.1.3",
  ],
  "@jridgewell/gen-mapping": [
    "0.1.1",
    "0.3.2",
  ],
  "@jridgewell/resolve-uri": [
    "3.1.0",
  ],
  "@jridgewell/set-array": [
    "1.1.2",
  ],
  "@jridgewell/sourcemap-codec": [
    "1.4.14",
  ],
  "@jridgewell/trace-mapping": [
    "0.3.14",
  ],
  "@npmcli/fs": [
    "2.1.1",
  ],
  "@npmcli/move-file": [
    "2.0.0",
  ],
  "@sinclair/typebox": [
    "0.24.27",
  ],
  "@sinonjs/commons": [
    "1.8.3",
  ],
  "@sinonjs/fake-timers": [
    "9.1.2",
  ],
  "@tootallnate/once": [
    "2.0.0",
  ],
  "@types/babel__core": [
    "7.1.19",
  ],
  "@types/babel__generator": [
    "7.6.4",
  ],
  "@types/babel__template": [
    "7.4.1",
  ],
  "@types/babel__traverse": [
    "7.18.0",
  ],
  "@types/graceful-fs": [
    "4.1.5",
  ],
  "@types/istanbul-lib-coverage": [
    "2.0.4",
  ],
  "@types/istanbul-lib-report": [
    "3.0.0",
  ],
  "@types/istanbul-reports": [
    "3.0.1",
  ],
  "@types/jest": [
    "28.1.6",
  ],
  "@types/node": [
    "18.7.1",
  ],
  "@types/prettier": [
    "2.7.0",
  ],
  "@types/stack-utils": [
    "2.0.1",
  ],
  "@types/yargs": [
    "17.0.11",
  ],
  "@types/yargs-parser": [
    "21.0.0",
  ],
  "abbrev": [
    "1.1.1",
  ],
  "agent-base": [
    "6.0.2",
  ],
  "agentkeepalive": [
    "4.2.1",
  ],
  "aggregate-error": [
    "3.1.0",
  ],
  "ansi-escapes": [
    "4.3.2",
  ],
  "ansi-regex": [
    "5.0.1",
  ],
  "ansi-styles": [
    "3.2.1",
    "4.3.0",
    "5.2.0",
  ],
  "anymatch": [
    "3.1.2",
  ],
  "aproba": [
    "2.0.0",
  ],
  "are-we-there-yet": [
    "3.0.1",
  ],
  "argparse": [
    "1.0.10",
  ],
  "babel-jest": [
    "28.1.3",
  ],
  "babel-plugin-istanbul": [
    "6.1.1",
  ],
  "babel-plugin-jest-hoist": [
    "28.1.3",
  ],
  "babel-preset-current-node-syntax": [
    "1.0.1",
  ],
  "babel-preset-jest": [
    "28.1.3",
  ],
  "balanced-match": [
    "1.0.2",
  ],
  "brace-expansion": [
    "1.1.11",
    "2.0.1",
  ],
  "braces": [
    "3.0.2",
  ],
  "browserslist": [
    "4.21.3",
  ],
  "bser": [
    "2.1.1",
  ],
  "buffer-from": [
    "1.1.2",
  ],
  "cacache": [
    "16.1.1",
  ],
  "callsites": [
    "3.1.0",
  ],
  "camelcase": [
    "5.3.1",
    "6.3.0",
  ],
  "caniuse-lite": [
    "1.0.30001375",
  ],
  "chalk": [
    "2.4.2",
    "4.1.2",
  ],
  "char-regex": [
    "1.0.2",
  ],
  "chownr": [
    "2.0.0",
  ],
  "ci-info": [
    "3.3.2",
  ],
  "cjs-module-lexer": [
    "1.2.2",
  ],
  "clean-stack": [
    "2.2.0",
  ],
  "cliui": [
    "7.0.4",
  ],
  "co": [
    "4.6.0",
  ],
  "collect-v8-coverage": [
    "1.0.1",
  ],
  "color-convert": [
    "1.9.3",
    "2.0.1",
  ],
  "color-name": [
    "1.1.3",
    "1.1.4",
  ],
  "color-support": [
    "1.1.3",
  ],
  "concat-map": [
    "0.0.1",
  ],
  "console-control-strings": [
    "1.1.0",
  ],
  "convert-source-map": [
    "1.8.0",
  ],
  "cross-spawn": [
    "7.0.3",
  ],
  "debug": [
    "4.3.4",
  ],
  "dedent": [
    "0.7.0",
  ],
  "deepmerge": [
    "4.2.2",
  ],
  "delegates": [
    "1.0.0",
  ],
  "depd": [
    "1.1.2",
  ],
  "detect-newline": [
    "3.1.0",
  ],
  "diff-sequences": [
    "28.1.1",
  ],
  "electron-to-chromium": [
    "1.4.214",
  ],
  "emittery": [
    "0.10.2",
  ],
  "emoji-regex": [
    "8.0.0",
  ],
  "encoding": [
    "0.1.13",
  ],
  "env-paths": [
    "2.2.1",
  ],
  "err-code": [
    "2.0.3",
  ],
  "error-ex": [
    "1.3.2",
  ],
  "escalade": [
    "3.1.1",
  ],
  "escape-string-regexp": [
    "1.0.5",
    "2.0.0",
  ],
  "esprima": [
    "4.0.1",
  ],
  "execa": [
    "5.1.1",
  ],
  "exit": [
    "0.1.2",
  ],
  "expect": [
    "28.1.3",
  ],
  "fast-json-stable-stringify": [
    "2.1.0",
  ],
  "fb-watchman": [
    "2.0.1",
  ],
  "fill-range": [
    "7.0.1",
  ],
  "find-up": [
    "4.1.0",
  ],
  "fs-minipass": [
    "2.1.0",
  ],
  "fs.realpath": [
    "1.0.0",
  ],
  "fsevents": [
    "2.3.2",
  ],
  "fsevents>::version=2.3.2&hash=18f3a7": [
    "2.3.2",
  ],
  "function-bind": [
    "1.1.1",
  ],
  "gauge": [
    "4.0.4",
  ],
  "gensync": [
    "1.0.0-beta.2",
  ],
  "get-caller-file": [
    "2.0.5",
  ],
  "get-package-type": [
    "0.1.0",
  ],
  "get-stream": [
    "6.0.1",
  ],
  "glob": [
    "7.2.3",
    "8.0.3",
  ],
  "globals": [
    "11.12.0",
  ],
  "graceful-fs": [
    "4.2.10",
  ],
  "has": [
    "1.0.3",
  ],
  "has-flag": [
    "3.0.0",
    "4.0.0",
  ],
  "has-unicode": [
    "2.0.1",
  ],
  "html-escaper": [
    "2.0.2",
  ],
  "http-cache-semantics": [
    "4.1.0",
  ],
  "http-proxy-agent": [
    "5.0.0",
  ],
  "https-proxy-agent": [
    "5.0.1",
  ],
  "human-signals": [
    "2.1.0",
  ],
  "humanize-ms": [
    "1.2.1",
  ],
  "iconv-lite": [
    "0.6.3",
  ],
  "import-local": [
    "3.1.0",
  ],
  "imurmurhash": [
    "0.1.4",
  ],
  "indent-string": [
    "4.0.0",
  ],
  "infer-owner": [
    "1.0.4",
  ],
  "inflight": [
    "1.0.6",
  ],
  "inherits": [
    "2.0.4",
  ],
  "ip": [
    "2.0.0",
  ],
  "is-arrayish": [
    "0.2.1",
  ],
  "is-core-module": [
    "2.10.0",
  ],
  "is-fullwidth-code-point": [
    "3.0.0",
  ],
  "is-generator-fn": [
    "2.1.0",
  ],
  "is-lambda": [
    "1.0.1",
  ],
  "is-number": [
    "7.0.0",
  ],
  "is-stream": [
    "2.0.1",
  ],
  "isexe": [
    "2.0.0",
  ],
  "istanbul-lib-coverage": [
    "3.2.0",
  ],
  "istanbul-lib-instrument": [
    "5.2.0",
  ],
  "istanbul-lib-report": [
    "3.0.0",
  ],
  "istanbul-lib-source-maps": [
    "4.0.1",
  ],
  "istanbul-reports": [
    "3.1.5",
  ],
  "jest": [
    "28.1.3",
  ],
  "jest-changed-files": [
    "28.1.3",
  ],
  "jest-circus": [
    "28.1.3",
  ],
  "jest-cli": [
    "28.1.3",
  ],
  "jest-config": [
    "28.1.3",
  ],
  "jest-diff": [
    "28.1.3",
  ],
  "jest-docblock": [
    "28.1.1",
  ],
  "jest-each": [
    "28.1.3",
  ],
  "jest-environment-node": [
    "28.1.3",
  ],
  "jest-get-type": [
    "28.0.2",
  ],
  "jest-haste-map": [
    "28.1.3",
  ],
  "jest-leak-detector": [
    "28.1.3",
  ],
  "jest-matcher-utils": [
    "28.1.3",
  ],
  "jest-message-util": [
    "28.1.3",
  ],
  "jest-mock": [
    "28.1.3",
  ],
  "jest-pnp-resolver": [
    "1.2.2",
  ],
  "jest-regex-util": [
    "28.0.2",
  ],
  "jest-resolve": [
    "28.1.3",
  ],
  "jest-resolve-dependencies": [
    "28.1.3",
  ],
  "jest-runner": [
    "28.1.3",
  ],
  "jest-runtime": [
    "28.1.3",
  ],
  "jest-snapshot": [
    "28.1.3",
  ],
  "jest-util": [
    "28.1.3",
  ],
  "jest-validate": [
    "28.1.3",
  ],
  "jest-watcher": [
    "28.1.3",
  ],
  "jest-worker": [
    "28.1.3",
  ],
  "js-tokens": [
    "4.0.0",
  ],
  "js-yaml": [
    "3.14.1",
  ],
  "jsesc": [
    "2.5.2",
  ],
  "json-parse-even-better-errors": [
    "2.3.1",
  ],
  "json5": [
    "2.2.1",
  ],
  "kleur": [
    "3.0.3",
  ],
  "leven": [
    "3.1.0",
  ],
  "lines-and-columns": [
    "1.2.4",
  ],
  "locate-path": [
    "5.0.0",
  ],
  "lru-cache": [
    "6.0.0",
    "7.13.2",
  ],
  "make-dir": [
    "3.1.0",
  ],
  "make-fetch-happen": [
    "10.2.0",
  ],
  "makeerror": [
    "1.0.12",
  ],
  "merge-stream": [
    "2.0.0",
  ],
  "micromatch": [
    "4.0.5",
  ],
  "mimic-fn": [
    "2.1.0",
  ],
  "minimatch": [
    "3.1.2",
    "5.1.0",
  ],
  "minipass": [
    "3.3.5",
  ],
  "minipass-collect": [
    "1.0.2",
  ],
  "minipass-fetch": [
    "2.1.0",
  ],
  "minipass-flush": [
    "1.0.5",
  ],
  "minipass-pipeline": [
    "1.2.4",
  ],
  "minipass-sized": [
    "1.0.3",
  ],
  "minizlib": [
    "2.1.2",
  ],
  "mkdirp": [
    "1.0.4",
  ],
  "ms": [
    "2.1.2",
    "2.1.3",
  ],
  "natural-compare": [
    "1.4.0",
  ],
  "negotiator": [
    "0.6.3",
  ],
  "node-gyp": [
    "9.1.0",
  ],
  "node-int64": [
    "0.4.0",
  ],
  "node-releases": [
    "2.0.6",
  ],
  "nopt": [
    "5.0.0",
  ],
  "normalize-path": [
    "3.0.0",
  ],
  "npm-run-path": [
    "4.0.1",
  ],
  "npmlog": [
    "6.0.2",
  ],
  "once": [
    "1.4.0",
  ],
  "onetime": [
    "5.1.2",
  ],
  "p-limit": [
    "2.3.0",
    "3.1.0",
  ],
  "p-locate": [
    "4.1.0",
  ],
  "p-map": [
    "4.0.0",
  ],
  "p-try": [
    "2.2.0",
  ],
  "parse-json": [
    "5.2.0",
  ],
  "path-exists": [
    "4.0.0",
  ],
  "path-is-absolute": [
    "1.0.1",
  ],
  "path-key": [
    "3.1.1",
  ],
  "path-parse": [
    "1.0.7",
  ],
  "picocolors": [
    "1.0.0",
  ],
  "picomatch": [
    "2.3.1",
  ],
  "pirates": [
    "4.0.5",
  ],
  "pkg-dir": [
    "4.2.0",
  ],
  "pretty-format": [
    "28.1.3",
  ],
  "promise-inflight": [
    "1.0.1",
  ],
  "promise-retry": [
    "2.0.1",
  ],
  "prompts": [
    "2.4.2",
  ],
  "react-is": [
    "18.2.0",
  ],
  "readable-stream": [
    "3.6.0",
  ],
  "require-directory": [
    "2.1.1",
  ],
  "resolve": [
    "1.22.1",
  ],
  "resolve-cwd": [
    "3.0.0",
  ],
  "resolve-from": [
    "5.0.0",
  ],
  "resolve.exports": [
    "1.1.0",
  ],
  "resolve>::version=1.22.1&hash=07638b": [
    "1.22.1",
  ],
  "retry": [
    "0.12.0",
  ],
  "rimraf": [
    "3.0.2",
  ],
  "safe-buffer": [
    "5.1.2",
    "5.2.1",
  ],
  "safer-buffer": [
    "2.1.2",
  ],
  "semver": [
    "6.3.0",
    "7.3.7",
  ],
  "set-blocking": [
    "2.0.0",
  ],
  "shebang-command": [
    "2.0.0",
  ],
  "shebang-regex": [
    "3.0.0",
  ],
  "signal-exit": [
    "3.0.7",
  ],
  "sisteransi": [
    "1.0.5",
  ],
  "slash": [
    "3.0.0",
  ],
  "smart-buffer": [
    "4.2.0",
  ],
  "socks": [
    "2.7.0",
  ],
  "socks-proxy-agent": [
    "7.0.0",
  ],
  "source-map": [
    "0.6.1",
  ],
  "source-map-support": [
    "0.5.13",
  ],
  "split-smartly2": [
    "workspace:.",
  ],
  "sprintf-js": [
    "1.0.3",
  ],
  "ssri": [
    "9.0.1",
  ],
  "stack-utils": [
    "2.0.5",
  ],
  "string-length": [
    "4.0.2",
  ],
  "string-width": [
    "4.2.3",
  ],
  "string_decoder": [
    "1.3.0",
  ],
  "strip-ansi": [
    "6.0.1",
  ],
  "strip-bom": [
    "4.0.0",
  ],
  "strip-final-newline": [
    "2.0.0",
  ],
  "strip-json-comments": [
    "3.1.1",
  ],
  "supports-color": [
    "5.5.0",
    "7.2.0",
    "8.1.1",
  ],
  "supports-hyperlinks": [
    "2.2.0",
  ],
  "supports-preserve-symlinks-flag": [
    "1.0.0",
  ],
  "tar": [
    "6.1.11",
  ],
  "terminal-link": [
    "2.1.1",
  ],
  "test-exclude": [
    "6.0.0",
  ],
  "tmpl": [
    "1.0.5",
  ],
  "to-fast-properties": [
    "2.0.0",
  ],
  "to-regex-range": [
    "5.0.1",
  ],
  "ts-type": [
    "2.1.10",
  ],
  "tslib": [
    "2.4.0",
  ],
  "type-detect": [
    "4.0.8",
  ],
  "type-fest": [
    "0.21.3",
  ],
  "typedarray-dts": [
    "1.0.0",
  ],
  "unique-filename": [
    "1.1.1",
  ],
  "unique-slug": [
    "2.0.2",
  ],
  "update-browserslist-db": [
    "1.0.5",
  ],
  "util-deprecate": [
    "1.0.2",
  ],
  "v8-to-istanbul": [
    "9.0.1",
  ],
  "walker": [
    "1.0.8",
  ],
  "which": [
    "2.0.2",
  ],
  "wide-align": [
    "1.1.5",
  ],
  "wrap-ansi": [
    "7.0.0",
  ],
  "wrappy": [
    "1.0.2",
  ],
  "write-file-atomic": [
    "4.0.1",
  ],
  "y18n": [
    "5.0.8",
  ],
  "yallist": [
    "4.0.0",
  ],
  "yargs": [
    "17.5.1",
  ],
  "yargs-parser": [
    "21.1.1",
  ],
  "yocto-queue": [
    "0.1.0",
  ],
}
`;

exports[`buildComputedPackage b/yarn.lock 1`] = `
{
  "@babel/code-frame": [
    "7.0.0",
  ],
  "@babel/generator": [
    "6.3.4",
    "7.3.4",
  ],
  "@babel/parser": [
    "7.3.4",
  ],
}
`;
